update: javascript content

--- a/javascript/contents/66.md
+++ b/javascript/contents/66.md
@@ -1,70 +1,102 @@
-## 工厂模式
+> Set 类似于数组，但是成员的值都是唯一的，没有重复的值, 实现了iterator接口
 
-> 工厂模式定义一个用于创建对象的接口，这个接口由子类决定实例化哪一个类。该模式使一个类的实例化延迟到了子类。而子类可以重写接口方法以便创建的时候制定自己的对象类型(抽象工厂)
-
-## 工厂模式的作用
-
-- 对象的构建十分复杂
-- 需要依赖具体的环境创建不同的实例
-- 处理大量具有相同属性的小对象
-
-## 工厂模式的注意事项
-
-- 不能滥用工厂，仅仅会给代码增加复杂度
-
-## 工厂模式的实现
-
-简单工厂的实现
+### set 的值不可重复，数组的值可以重复
 
 ```javascript
-// 工厂对象
-var factory = {};
-factory.createClothes = function(){
-  this.workers = 30;
-  console.log('clothes ok');
-};
-factory.createShoes = function(){
-  this.workers = 100;
-  console.log('shoes ok');
-};
-factory.transport = function () {
-  this.cars = 5;
-  console.log('transport ok');
-}
-
-// 工程中的厂长
-factory.director = function (params) {
-  // 厂长发布命令去造一条生产线或运输线
-  return new factory[params]();
-}
-
-var transportStuff = factory.director('transport');
-console.log(transportStuff.cars); // 5
-
+let arr = [1,2,3,'5','5'];
+let st = new Set(arr);
+console.log(st); // 可以通过set来去除数组的重复的值，返回的是一个伪数组
+console.log(st.size); // 4
 ```
 
-抽象工厂的实现
+### set 的 add , delete, has, clear 方法
+
+简单的add 与 delete ：
 
 ```javascript
-// 抽象工厂的实现 打个比方：大厂
-var AbstractFactory = function(){};
-AbstractFactory.prototype = {
-  // 在这个工厂中不干什么事，只定义接口(规范)而不实现    
-  createFactory:function() {
-    throw new Error('This is an abstract method');
-  }
-}
+let st = new Set();
+var u = {name:'Joh'};
+st.add(u);
+let bool = st.delete(u);
+console.log(bool); // true;
+```
 
-// 子类的小厂 
-var SmallFactory = function () {
-  AbstractFactory.call(this);
-}
-// 这里继承父类
-SmallFactory.prototype = new AbstractFactory();
-SmallFactory.prototype.constructor = SmallFactory; // 将constructor指向自身
-// 这里实现父类(抽象工厂)的方法 （父类只定义规范而不实现，由子类实现）
-SmallFactory.prototype.createFactory = function () {
-  console.log('small');
-}
+连续add与has的api ：
 
+```javascript
+let st = new Set();
+var u = {name:'Joh'};
+var r = {name:'Lily'};
+st.add(u).add(r);
+let bool = st.delete(r);
+console.log(bool); // true
+console.log(st.has(r)); // false
+console.log(st.has(u)); // true;
+```
+
+clear清空set集合
+
+```javascript
+let st = new Set();
+var u = {name:'Joh'};
+var r = {name:'Lily'};
+st.add(u).add(r);
+st.clear();
+console.log(st.size); // 0
+```
+
+### 通过Array.from方法把类似数组结构的模型转化为数组
+
+```javascript
+let arr = ['xxx', 'yyyy', 'yyyy'];
+let newArr = Array.from(new Set(arr)); 
+console.log(Array.isArray(newArr)); // true
+console.log(newArr); // ["xxx", "yyyy"]
+```
+
+### Set 原型上的Symbol.iterator 和 values 是同一个值, 可直接for-of遍历
+
+```javascript
+console.log(Set.prototype[Symbol.iterator] === Set.prototype.values); // true
+let st = new Set(['xxx', 'yyyy', 'yyyy', 'John']);
+for(let k of st) {
+  console.log(k); // 依次输出 xxx yyyy John 可以直接遍历，兼容map的数据结构
+}
+```
+
+### set中的keys和values方法
+
+```javascript
+    let st = new Set(['xxx', 'yyyy', 'yyyy', 'John']);
+    console.log(st.size); // 3
+    let itKeys = st.keys();
+    for(let k of itKeys) {
+      console.log(k); // 依次输出 xxx yyyy John
+    }
+    console.log('>>>>>');
+    let itVals = st.values();
+    for(let v of itVals) {
+      console.log(v); // 依次输出 xxx yyyy John
+    }
+```
+
+### set 的entries 实体对象，是个键和值的数组结构
+
+```javascript
+let st = new Set(['xxx', 'yyyy', 'yyyy', 'John']);
+let entriesIt = st.entries(); // 
+for(let v of entriesIt) {
+  console.log(v); // 依次输出 ["xxx", "xxx"] ["yyyy", "yyyy"] ["John", "John"]
+}
+```
+
+### 关于NaN在set中的特殊性
+
+```javascript
+let st = new Set();
+console.log(NaN === NaN); // false , 此处 NaN 是不全等的，理应可以添加多个，不算重复，但是这里是个特例
+st.add(NaN).add(NaN).add(NaN);
+for(let v of st) {
+  console.log(v); // 只输出一个 NaN 
+}
 ```
