--- a/javascript/contents/67.md
+++ b/javascript/contents/67.md
@@ -1,41 +1,139 @@
-## 外观模式
+> Map 数据结构类似于对象，也是键值对的集合，但是“键”的范围不限于字符串，各种类型的值（包括对象）都可以当作键。也就是说，Object 结构提供了“字符串—值”的对应，Map 结构提供了“任何—值”的对应，是一种更完善的 Hash 结构实现。如果你需要“键值对”的数据结构，Map 比 Object 更合适。
 
-> 外观模式(Facade)为子系统中的一组接口提供了一个一致的界面，此模块定义了一个高层接口，这个接口使得这一子系统更加容易使用。 外观模式不仅简化类中的接口，而且对接口与调用者也进行了解耦，外观模式经常被认为开发者必备，它可以将一些复杂操作封装起来，并创建一个简单的接口用于调用。
-
-## 外观模式的作用
-
-- 在设计初期，应该要有意识地将不同的两个层分离，比如经典的三层结构。
-- 在开发阶段，子系统往往因为不断的重构演化而变得越来越复杂，增加外观模式可以提供一个简单的接口，减少他们之间的依赖。
-- 在维护阶段为系统开发一个外观Facade类，为设计粗糙和高度复杂的遗留代码提供比较清晰的接口，让新系统和Facade对象交互。
-
-## 外观模式的注意事项
-
-- 外观模式被开发者连续使用时会产生一定的性能问题，因为在每次调用时都要检测功能的可用性。
-
-## 外观模式实战
+### 初识map
 
 ```javascript
-// 商店对象
-var shop = {};
-// 商店内制造食物
-shop.createFood = function() {
-  console.log('Food ok');
-}
-// 商店内制造饮料
-shop.createDrink = function () {
-  console.log('Drink ok');
-}
-// 商店内提供服务
-shop.service = function () {
-  this.createFood(); // 提供食物
-  this.createDrink(); // 提供饮料
-}
-// 商店开门营业
-shop.open = function () {
-  return this.service(); // 提供服务
+var obj = {
+  'name':'Joh',
+  qq:'5222',
+  'full name':'Johnny'
+};
+
+let map = new Map();
+map
+  .set(obj, 'Hello map')
+  .set('haha', 12)
+  .set(52, obj)
+  .set(NaN, new Set([1,2,3]));
+
+console.log(map);
+console.log(map.size); // 4
+```
+
+Map可以连续set,就像Set可以连续add一样，同样有size的api
+
+### map 的delete, has方法 
+
+```javascript
+var obj = {
+  'name':'Joh',
+  qq:'5222',
+  'full name':'Johnny'
+};
+
+var arr = [1,2];
+
+let map = new Map();
+// map 可以连续set
+map
+  .set(obj,'11')
+  .set(11,3)
+  .set(12,'H')
+  .set(arr,'h');
+
+var delRes = map.delete(obj); // map不可以连续 delete
+console.log(delRes); // true
+var hasBool1 = map.has(11);
+console.log(hasBool1); // true
+var hasBool2 = map.has(arr);
+console.log(hasBool2); // true
+console.log(map.size); // 3
+```
+
+### NaN在map上的特殊性与clear方法
+
+```javascript
+let map = new Map();
+// map 可以连续set
+map
+  .set(11,3)
+  .set(12,'H')
+  .set(NaN,'h1')
+  .set(NaN,'h2'); // 覆盖前值
+
+console.log(map.get(NaN));  // h2
+
+map.clear();
+console.log(map.size); // 0
+```
+
+和set相同，NaN在map上具有唯一性，clear方法会将集合清空
+
+### map 的构造函数参数的传递，取值get方法，keys方法，values方法
+
+```javascript
+let map = new Map([
+  ['name','Joh'],
+  ['age',10]
+]);
+
+let name = map.get('name');
+let age = map.get('age');
+console.log(name); // Joh
+console.log(age); // 10
+
+let keys = map.keys();
+
+for(let k of keys) {
+  console.log(k); // 分别输出 name 和 age
 }
 
-// 调用门面(外观)
-shop.open();
+let values = map.values();
 
+for(let v of values) {
+  console.log(v); // 分别输出 Joh 和 10
+}
+```
+
+### map与set的原型属性比较和map使用entries方法获得数据的实体
+
+```javascript
+let map = new Map([
+  ['name','Joh'],
+  ['age',10]
+]);
+
+console.log(Set.prototype[Symbol.iterator] === Set.prototype.values); // true
+console.log(Map.prototype[Symbol.iterator] === Map.prototype.values); // false
+console.log(Map.prototype[Symbol.iterator] === Map.prototype.entries); // true
+
+let entries = map.entries();
+
+for (let en of entries) {
+  console.log(en); // 分别输出 ['name','Joh'] 和 ['age',10]
+}
+```
+
+### map内forEach方法和对象传递，以及内部this的使用
+
+```javascript
+let map = new Map([
+  ['name','Joh'],
+  ['age',10]
+]);
+
+var me = {
+  name:"Joh"
+};
+
+map.forEach(function (val, key) {
+  console.log(key, val); // 分别输出 name Joh 和 "age" 10
+});
+
+console.log('>>>>>');
+
+map.forEach(function (val, key) {
+  // console.log(key, val); // 分别输出 name Joh 和 "age" 10
+  console.log(this); // {name: "Joh"} 此处的this就是传递进来的对象
+}, me);
 ```
