--- a/javascript/contents/70.md
+++ b/javascript/contents/70.md
@@ -1,279 +1,106 @@
-> Generator 函数是 一种异步编程解决方案，Generator 函数会返回一个遍历器对象，Generator 函数是一个普通函数，但是有两个特征。一是，function关键字与函数名之间有一个星号；二是，函数体内部使用yield表达式。
+在ES6中针对对象的方法做了一些扩展和优化，下面简单总结下常用的方法
 
-### 认识generator函数
+### is方法判断两个对象是否全等
 
 ```javascript
-function * fn() {
-  console.log('hello');
-  return 'Joh';
-}
-// 执行fn()时不会直接执行方法体中的代码，它会返回一个指针, 这个指针实现了 interator接口，也就是返回一个interator对象
-let it = fn();
-// 通过调用next就会执行方法体, 返回结果是 {value:'Joh', done:true}, 其中next返回的是函数体中return的值
-let res = it.next();
-console.log(res);
+console.log(Object.is({},{}), {} === {}); // false, false
+console.log(Object.is(NaN,NaN), NaN === NaN); // true, false
+console.log(Object.is(+0,-0), +0 === -0); // false, true
 ```
 
-### generator函数中的yield 与 return
+### assign方法用于对象属性的拷贝
+
+如果两个参数，把第二个参数中可枚举的属性拷贝到第一个参数对象中, 仅限于可枚举的属性，如果有多个参数，那么同样拷贝
 
 ```javascript
-function * fn() {
-    // 和yield相配合，把一个generator内部分为几个断点来执行，每个断点就是yield语句
-    // 注意 yield和return的区别： yield可以有多个，return只能有1个
-    yield 1;
-    yield 2;
-    yield 3;
-    return 4; // 可以没有return值，done为true的value将会是undefined
+var obj = {};
+var obj2 = Object.assign(obj,{name:'Joh'},{age:10});
+
+console.log(obj === obj2, obj); // true, {name:'Joh', age:10}
+console.log(Object.is(obj,obj2)); // true
+```
+
+相同属性的覆盖拷贝
+
+```javascript
+const DEFAULT_OPTIONS = {
+  name:"Joh"
+};
+function test(opts) {
+  let options = Object.assign({}, DEFAULT_OPTIONS, opts);
+  console.log(options);
+}
+test(); // {name: "Joh"}
+test({name:"Lily",age:10}); // {name: "Lily", age: 10}
+```
+
+Symbol属性同样拷贝
+
+```javascript
+var skey1 = Symbol('test');
+var skey2 = Symbol('test');
+var obj = {};
+Object.assign(obj,{name:'Joh'},{age:10},{[skey1]: 'I am test1'},{[skey2]: 'I am test2'}); // 拷贝
+// 验证Symbol的拷贝成功
+console.log(obj[skey1]); // I am test
+console.log(obj); // {name: "Joh", age: 10, Symbol(test): "I am test1", Symbol(test): "I am test2"}
+
+```
+
+### Object方法：keys，getOwnPropertyNames， getOwnPropertySymbols，getOwnPropertyDescriptor的应用
+
+```javascript
+class A {
+  constructor() {
+    this.name = 'Joh';
   }
-  let it = fn();
-  // 在for-of 循环中只能打印done为false的value值，done为true时,程序终止
-  for(let v of it) {
-    console.log(v); // 分别输出 1 2 3
+
+  [Symbol('fullnameA')] () {
+
   }
-```
+  getName() {
 
-### yield 的值与赋值语句
-
-```javascript
-function * fn(_name) {
-  let name = yield _name; // yield 的默认值为undefined
-  return name;
-}
-let it = fn('Joh');
-console.log(it.next()); // {value:'Joh', done:false}
-console.log(it.next('Tom')); // {value:'Tom', done:true} // 此处value应该为undefined，但是通过next参数的形式赋值改变了最后一个值
-console.log(it.next('Lily')); // {value: undefined, done:true} // 已经循环完毕，即使传值也是undefined
-
-```
-
-### yield 语句的位置与括号
-
-```javascript
-function sum(a, b) {
-  return a + b;
-}
-function * fn() {
-  let res = sum(yield 1, 5 + (yield 3));
-  console.log(res);
-  console.log('my qq: ' + (yield qq)); // yield 在一个语句中需要括起来
-}
-fn();
-```
-
-### yield 异常捕获
-
-异常捕获的方式1：
-```javascript
-function * fn() {
-  let qq = yield; // yield 默认返回undefined, 不会抛出异常
-  console.log(qq);
-}
-
-let g = fn();
-g.next(); // 第一个断点没有输出
-// g.next('qq 11111'); // 完毕之后传值输出：qq 11111
-g.throw('error!'); // Uncaught error!
-```
-
-异常捕获的方式2：
-
-```javascript
-function * fn() {
-  let qq;
-  try {
-    qq = yield; // yield 默认返回undefined
-  }catch(e){
-    console.log('qq have error');
-  }finally{
-    console.log(qq);
   }
 }
-let g = fn();
-g.next();
-g.throw('error!');
-// qq have error
-// undefined
-```
-
-异常捕获的方式3：
-
-```javascript
-function * fn() {
-  let qq;
-  qq = yield;
-  console.log(qq);
-}
-let g = fn();
-g.next();
-try{
-  g.throw('error!');
-}catch(e){
-  console.log('qq have error!');
-}
-```
-
-异常捕获的方式4:
-
-```javascript
-function * fn() {
-  let qq;
-  try {
-    qq = yield ff; // ff 未定义, 所以qq不会被正确赋值 此处是非 yield 的异常
-  }catch(e){
-    console.log('err1');
+class B extends A {
+  constructor() {
+    super();
+    this.age = 22;
   }
-  console.log(qq);
-}
-let g = fn();
-g.next();
-g.next('qq 5554');
-// err1
-// undefined
-```
 
-### 利用generator和promise结合使用，让异步的逻辑关系，使用同步的方式书写
+  [Symbol('fullnameB')] () {
 
-```javascript
-function asyncF(name) {
-  return new Promise(function(resolve){
-    setTimeout(function(){
-      resolve('my name is ' + name);
-    });
-  });
-}
-
-function * fn() {
-  console.log(yield asyncF('Joh'));
-}
-
-let gf = fn();
-
-function exec(gf,value) {
-  let res = gf.next(value);
-  if(!res.done) {
-    if(res.value instanceof Promise) {
-      res.value.then(function (v) {
-        exec(gf, v);
-      })
-    }else{
-      exec(gf, res.value);
-    }
   }
-}
-exec(gf); // my name is Joh
-```
+  getAge() {
 
-更复杂的写法：
-
-```javascript
-function asyncF(name) {
-  return new Promise(function(resolve){
-    setTimeout(function(){
-      resolve('my name is ' + name);
-    });
-  });
-}
-
-function sum(a, b) {
-  return new Promise(function (resolve) {
-    setTimeout(function () {
-        resolve(a + b);
-    });
-  })
-}
-
-function * fn(name) {
-  if((yield sum(3,5)) > 6) {
-    console.log(yield asyncF(name));
-  }else{
-    console.log('error');
   }
 }
 
-let gf = fn('Joh');
+B.prototype.getColor = function () {};
 
-// generator 执行器 相当于 tj/co 模块
-function exec(gf,value) {
-  let res = gf.next(value);
-  if(!res.done) {
-    if(res.value instanceof Promise) {
-      res.value.then(function (v) {
-        exec(gf, v);
-      })
-    }else{
-      exec(gf, res.value);
-    }
-  }
-}
-exec(gf); // my name is Joh
-```
+var b = new B();
+// 备注：只能获取【自身可枚举属性】，但得不到【原型链上的属性(比如方法) + Symbols属性】
+console.log(Object.keys(b)); // ["name", "age"] 
 
-使用纯promise实现：
+// 备注：可获取【可枚举属性】,但得不到【原型链上的属性 + Symbols属性】
+console.log(Object.getOwnPropertyNames(b)); // ["name", "age"] 
 
-```javascript
-function asyncF(name) {
-  return new Promise(function(resolve){
-    setTimeout(function(){
-      resolve('my name is ' + name);
-    });
-  });
+// 使用keys怎么也得不到原型链上不可枚举的属性[通过语法糖创建的方法]
+console.log(Object.keys(B.prototype)); // ["getColor"]
+// 使用 getOwnPropertyNames 传入prototype 可以得到原型链上的属性
+console.log(Object.getOwnPropertyNames(B.prototype)); // ["constructor", "getColor", "getAge"]
+
+// 通过getOwnPropertySymbols可以得到自身Symbols属性，但得不到继承的Symbol属性
+console.log(Object.getOwnPropertySymbols(B.prototype)); // [Symbol(fullnameB)]
+
+// 获取自身可枚举属性包括继承过来的，备注：通过class内部的语法糖创建的方法是不可枚举的，但是通过后期B.prototype.出来的是可枚举的
+for(let key in b) {
+  console.log(key); // 依次输出 name 和 age 和 getColor
 }
 
-function sum(a, b) {
-  return new Promise(function (resolve) {
-    setTimeout(function () {
-        resolve(a + b);
-    });
-  })
-}
+// 描述对象 测试可枚举性
+console.log(Object.getOwnPropertyDescriptor(B.prototype,'getColor'));
+console.log(Object.getOwnPropertyDescriptor(B.prototype,'getColor').enumerable); // true
+console.log(Object.getOwnPropertyDescriptor(B.prototype,'getAge').enumerable); // false
 
-function fn(name) {
-  sum(3,5)
-    .then(function (num) {
-      if(num > 6) {
-        asyncF(name)
-          .then(function (v) {
-            console.log(v);
-          })
-      }else{
-        console.log('error');
-      }
-    })
-}
-
-fn('Joh');
-```
-
-### 使用co模块，来代替自己写的执行器
-
-```javascript
-var co = require('co');
-
-function asyncF(name) {
-  return new Promise(function(resolve){
-    setTimeout(function(){
-      resolve('my name is ' + name);
-    });
-  });
-}
-
-function sum(a, b) {
-  return new Promise(function (resolve) {
-    setTimeout(function () {
-        resolve(a + b);
-    });
-  })
-}
-
-function * fn(name) {
-  if((yield sum(3,5)) > 6) {
-    console.log(yield asyncF(name));
-  }else{
-    console.log('error');
-  }
-}
-
-var fnx = co.wrap(fn);
-
-fnx('Joh'); // my name is Joh
 ```
