--- a/javascript/contents/72.md
+++ b/javascript/contents/72.md
@@ -1,139 +1,78 @@
-> Map 数据结构类似于对象，也是键值对的集合，但是“键”的范围不限于字符串，各种类型的值（包括对象）都可以当作键。也就是说，Object 结构提供了“字符串—值”的对应，Map 结构提供了“任何—值”的对应，是一种更完善的 Hash 结构实现。如果你需要“键值对”的数据结构，Map 比 Object 更合适。
+ES6 中对字符串进行了扩展，而模板字符串就是一个非常实用的方式，可以在html中实现与变量和方法的混编
 
-### 初识map
+### 之前我们手动拼接字符串的方式
 
 ```javascript
-var obj = {
-  'name':'Joh',
-  qq:'5222',
-  'full name':'Johnny'
-};
+let hello = 'Hello';
+let html = '<div>' + 
+  '<span>'+ hello +'</span>' + 
+  '</div>';
 
-let map = new Map();
-map
-  .set(obj, 'Hello map')
-  .set('haha', 12)
-  .set(52, obj)
-  .set(NaN, new Set([1,2,3]));
-
-console.log(map);
-console.log(map.size); // 4
+console.log(html); // <div><span>Hello</span></div>
 ```
 
-Map可以连续set,就像Set可以连续add一样，同样有size的api
-
-### map 的delete, has方法 
+### ES6中使用模板字符串来优化了拼接的方式
 
 ```javascript
-var obj = {
-  'name':'Joh',
-  qq:'5222',
-  'full name':'Johnny'
-};
+let name = 'Joh';
+let qq = '56655';
 
-var arr = [1,2];
-
-let map = new Map();
-// map 可以连续set
-map
-  .set(obj,'11')
-  .set(11,3)
-  .set(12,'H')
-  .set(arr,'h');
-
-var delRes = map.delete(obj); // map不可以连续 delete
-console.log(delRes); // true
-var hasBool1 = map.has(11);
-console.log(hasBool1); // true
-var hasBool2 = map.has(arr);
-console.log(hasBool2); // true
-console.log(map.size); // 3
-```
-
-### NaN在map上的特殊性与clear方法
-
-```javascript
-let map = new Map();
-// map 可以连续set
-map
-  .set(11,3)
-  .set(12,'H')
-  .set(NaN,'h1')
-  .set(NaN,'h2'); // 覆盖前值
-
-console.log(map.get(NaN));  // h2
-
-map.clear();
-console.log(map.size); // 0
-```
-
-和set相同，NaN在map上具有唯一性，clear方法会将集合清空
-
-### map 的构造函数参数的传递，取值get方法，keys方法，values方法
-
-```javascript
-let map = new Map([
-  ['name','Joh'],
-  ['age',10]
-]);
-
-let name = map.get('name');
-let age = map.get('age');
-console.log(name); // Joh
-console.log(age); // 10
-
-let keys = map.keys();
-
-for(let k of keys) {
-  console.log(k); // 分别输出 name 和 age
+function log() {
+  return 'Hi there!';
 }
+let html = `
+  <div>
+    <ul>
+        <li>${ name === 'Joh' ? 'is Joh' : 'not Joh'}</li>
+        <li>${qq}</li>
+        <li>${log()}</li>
+    <ul>
+  </div>
+`
+console.log(html);
 
-let values = map.values();
-
-for(let v of values) {
-  console.log(v); // 分别输出 Joh 和 10
-}
+/*
+// 输出如下html:
+<div>
+    <ul>
+        <li>is Joh</li>
+        <li>56655</li>
+        <li>Hi there!</li>
+    <ul>
+</div>   
+*/
 ```
 
-### map与set的原型属性比较和map使用entries方法获得数据的实体
+可以看出模板字符串优化了之前拼接字符串的方式，更方便于编程
+
+### 关于标签模板
+
+未经处理的标签函数与模板字符串的结合，导致模板字符串失效
 
 ```javascript
-let map = new Map([
-  ['name','Joh'],
-  ['age',10]
-]);
-
-console.log(Set.prototype[Symbol.iterator] === Set.prototype.values); // true
-console.log(Map.prototype[Symbol.iterator] === Map.prototype.values); // false
-console.log(Map.prototype[Symbol.iterator] === Map.prototype.entries); // true
-
-let entries = map.entries();
-
-for (let en of entries) {
-  console.log(en); // 分别输出 ['name','Joh'] 和 ['age',10]
+function tag() {
+  return 'tag';
 }
+let name = "Joh";
+var res = tag`hello ${name}`;
+console.log(res); // tag
 ```
 
-### map内forEach方法和对象传递，以及内部this的使用
+标签函数对模板字符串进行处理, 安全编码的示例：
 
 ```javascript
-let map = new Map([
-  ['name','Joh'],
-  ['age',10]
-]);
-
-var me = {
-  name:"Joh"
-};
-
-map.forEach(function (val, key) {
-  console.log(key, val); // 分别输出 name Joh 和 "age" 10
-});
-
-console.log('>>>>>');
-
-map.forEach(function (val, key) {
-  // console.log(key, val); // 分别输出 name Joh 和 "age" 10
-  console.log(this); // {name: "Joh"} 此处的this就是传递进来的对象
-}, me);
+function safe(strArr) {
+  let res = '';
+  console.log(arguments);
+  for(var i=0, len = strArr.length; i < len; i++) {
+    res += strArr[i].replace(/</g, '&lt;').replace(/>/g, '&gt;');
+    if(i < arguments.length -1) {
+      res += arguments[i + 1];
+    }
+  }
+  return res;
+}
+let name = 'Joh';
+var result = safe`<p>hello ${name}</p>`;
+console.log(result); // &ltp&gt;hello Joh&lt/p&gt;
 ```
