--- a/javascript/contents/73.md
+++ b/javascript/contents/73.md
@@ -1,177 +1,93 @@
-在ES6中又对Array扩展了不少方法，下面我们来看下
+ES6 允许使用“箭头”（=>）定义函数, 也叫“lambda表达式”
 
-### from方法
+### ES6之前普通函数的写法
 
-将伪数组转换为数组
 ```javascript
-let obj = {
-  '0':'h',
-  '1':'i',
-  'length':2
+var fn = function () {};
+```
+
+### 箭头函数的登场
+
+```javascript
+var fn2 = (name) => {
+  console.log('fn2');
 };
-let arr = Array.from(obj);
-console.log(Array.isArray(arr)); // true
-console.log(arr); // ["h", "i"]
+
+// 一个参数可以不加括号
+var fn3 = name => {
+  console.log('fn3');
+}
+
+fn2(); // fn2
+fn3(); // fn3
 ```
 
-通过第二个回调参数对值进行再加工处理
+### 箭头函数在定时器中的this
 
 ```javascript
-let obj = {
-  '0':'h',
-  '1':'i',
-  'length':2
-};
-let arr = Array.from(obj,function(item, index) {
-  // 对返回的值进行处理
-  return item + '...'
-});
-console.log(arr); // ["h...", "i..."]
-```
-
-可转换实现了interator接口的类型如：set和map 为数组
-```javascript
-var set = new Set(['me','book','Joh']);
-var arr = Array.from(set);
-console.log(arr); // ["me", "book", "Joh"]
-```
-
-其他：使dom节点NodeList转化为数组
-
-### of方法
-
-```javascript
-var arr = new Array(5); // 数组之前的这种形式和字符串等类型的操作不统一，得到的只是长度为5的空数组
-console.log(arr); // [empty × 5]
-
-var arr2 = Array.of(12);
-console.log(arr2);// [12]
-
-var arr3 = Array.of(12,3,5,22);
-console.log(arr3); // [12, 3, 5, 22]
-```
-
-使用of方法，直接获得数组
-
-### find方法
-
-find 查找符合函数的标准，返回一个真值，第一个就符合 : 
-
-```javascript
-var arr = [undefined, 22,33,44];
-var val = arr.find(function () {
-  return true;
-});
-console.log(val); // undefined 始终返回第一个值，无论是0,'', NaN, undefined, null 都返回第一个值
-```
-
-返回false, 将没有一个符合，最终结果是undefined
-```javascript
-var arr = [20, 22,33,44];
-var val = arr.find(function () {
-  return false;
-});
-console.log(val); // undefined
-```
-
-通过find参数中的value来判断
-```javascript
-var arr = [21, 22, 33, 44];
-var val = arr.find(function (value, index, arr) {
-  return value > 22;
-});
-console.log(val); // 33
-```
-
-### findIndex方法
-
-和find方法几乎一样，就是返回值是索引
-
-```javascript
-var arr = [21, 22, 33, 44];
-var val = arr.findIndex(function (value, index, arr) {
-  return value > 22;
-});
-console.log(val); // 2
-```
-
-findIndex可以解决indexOf无法解决的问题：
-
-```javascript
-var arr = [NaN];
-var res1 = arr.indexOf(NaN);
-var res2 = arr.findIndex(function (v) {
-  return Object.is(NaN, v);
+setTimeout(function () {
+  console.log(this); // window
 });
 
-console.log(res1); // -1 未找到
-console.log(res2); // 0 找到
+setTimeout(()=>{
+  console.log(this); // undefined
+})
 ```
 
-### copyWithin方法
-
-copyWithin 操作原数组 (起始索引,拷贝值的索引起点，拷贝值的索引终点), 将拷贝的值替换原值 ,注意左闭右开
+### 箭头函数在对象中的this指向
 
 ```javascript
-// 替换多个值
-var arr1 = [1,2,3,4,5,6,7];
-arr1.copyWithin(1,5,7);
-console.log(arr1); //  [1, 6, 7, 4, 5, 6, 7]
+class User{
+  constructor(name,age){
+    this.name = name;
+    this.age = age;
+  }
+  changeName(name) {
+    this.name = name;
+  }
+  changeAge(age) {
+    this.age = age;
+  }
+  change(name,age) {
+    let self = this;
+    (()=>{
+      this.name = name;
+      this.age = age;
+      console.log(self); // 在箭头函数中，this指向外面的对象
+    })();
+  }
+}
 
-// 替换一个值的不同表示1
-var arr2 = [1,2,3,4,5,6,7];
-arr2.copyWithin(2,5,6); // 将6替换3
-console.log(arr2); //  [1, 2, 6, 4, 5, 6, 7]
-
-// 替换一个值的不同表示2 从后面数，最后一个是-1，倒数第二个是-2
-var arr3 = [1,2,3,4,5,6,7];
-arr3.copyWithin(2,-2,-1); 
-console.log(arr3); // [1,2,6,4,5,6,7]
-
-// 替换一个值的不同表示3 前后混合使用
-var arr3 = [1,2,3,4,5,6,7];
-arr3.copyWithin(2,5,-1); 
-console.log(arr3); // [1,2,6,4,5,6,7]
+var u = new User();
+u.change('Joh', 10); // User {name: "Joh", age: 10}
 ```
 
-### fill方法
+### 箭头函数的简写
 
-fill(默认填充值，填充起始索引，填充结束索引) ， 注意区间的左闭右开
+箭头函数中只包括一条return语句，则可以省略大括号
 
 ```javascript
-var arr1 = [1,2,3,4,5,6,7];
-arr1.fill(10);
-console.log(arr1); // [10, 10, 10, 10, 10, 10, 10]
+var fn = (n)=>{
+  return n*3
+}
+console.log(fn(3)); // 9
 
-var arr2 = [1,2,3,4,5,6,7];
-arr2.fill(10,2,5); 
-console.log(arr2); // [1, 2, 10, 10, 10, 6, 7]
+var fn2 = n => n*4;
+console.log(fn2(3)); // 12
 ```
 
-### includes方法
-
-includes 用于查找是否包含某种元素
-```javascript
-const arr1 = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', NaN];
-console.log('%s', arr1.includes('c')) // true
-console.log('%s', arr1.includes('z')) // false
-console.log('%s', arr1.includes(NaN)) // true
-```
-
-函数的第二个参数表示判断的起始位置 :
+### 箭头函数中不能正常使用arguments属性
 
 ```javascript
-const arr1 = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', NaN];
-console.log('%s', arr1.includes('d', 1)) // true
-console.log('%s', arr1.includes('d', 3)) // true
-console.log('%s', arr1.includes('d', 4)) // false
+var fn = n => {
+  console.log(arguments[0]); 
+}
+fn(12); // undefined
+
+var fn2 = n => {
+  console.log(n);
+}
+fn2(10); // 10
 ```
 
-第二个参数也可以是负数，表示从右数过来第几个，但是不改变判断搜索的方向，搜索方向还是从左到右
-
-```javascript
-const arr1 = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', NaN]
-console.log('%s', arr1.includes('k', -1)); // false
-console.log('%s', arr1.includes('k', -2)); // true
-console.log('%s', arr1.includes('i', -3)); // false
-```
+最后，还要注意的是箭头函数不能通过new关键字来实例化
