--- a/javascript/contents/74.md
+++ b/javascript/contents/74.md
@@ -1,84 +1,108 @@
-之前我们定义一个对象特别麻烦，现在ES6简化了这些麻烦，在对象属性的新定义方法中存在以下的优化
+> ES6 允许按照一定模式，从数组和对象中提取值，对变量进行赋值，这被称为解构（Destructuring）, 而数组的解构赋值是从数组中提取值，按照对应位置，对变量赋值。
 
-### 我们之前定义对象属性的方法
+### ES6之前的赋值操作
 
 ```javascript
-var obj = {
-  getName:function(firstName,lastName){
-    return {firstName: firstName, lastName: lastName}
+var arr = [1,2,3];
+var a = arr[0];
+var b = arr[1];
+var c = arr[2];
+console.log(a,b,c); // 1 2 3
+```
+
+### 对一维数组的解构赋值的应用
+
+```javascript
+var arr = [1,2,3];
+var [a,b,c] = arr;
+console.log(a,b,c); // 1 2 3
+```
+
+### 对多维数组的解构赋值的应用
+
+```javascript
+let arr = [22, [5,8], 11];
+let [a,[b,c],d] = arr;
+console.log(a,b,c,d); // 22 5 8 11
+```
+
+### 解构赋值用于变量的交换举例
+
+```javascript
+let x = 11;
+let y = 22;
+[y,x] = [x,y];
+console.log(x,y); // 22 11
+```
+
+### 解构赋值中不完全的解析示例
+
+```javascript
+let arr = [22, [5,8], 11];
+let [a,[b],c] = arr;
+console.log(a, b, c); // 22 5 11
+
+let [m,[,n],o] = arr;
+console.log(m, n, o); // 22 8 11
+```
+
+### 不能被数组解析的值
+
+```javascript
+let [m] = "";
+console.log(m); // undefined;
+let [x,y] = NaN; // NaN is not iterable. 不能被数组解析的值：NaN, undefined, null, {}
+```
+
+### 实现了iterator接口的类型都可以被解析赋值
+
+```javascript
+let [x,y] = new Set([22, 33]);
+console.log(x,y); // 22 33
+```
+
+### 自己创造一个实现iterator接口的对象进行解构赋值
+
+```javascript
+class Group{
+  constructor() {
+
+  }
+
+  next() {
+    return {value:'Joh', done: false};
+  }
+
+  [Symbol.iterator]() {
+    return this;
   }
 }
+let group = new Group();
+let [x,y,z,m,n] = group;
+console.log(x,y,z,m,n);  // Joh Joh Joh Joh Joh 备注：这里如果类中的next的done为true，那么全为undefined
 ```
 
-比较的麻烦
-
-### ES6中属性新的定义方法，极简主义
+### ... 运算符 转换成数组的解构举例
 
 ```javascript
-var obj = {
-  getName(firstName,lastName){
-    return {firstName,lastName};
-  }
-}
+var [x,w, ...y] = [1,2,3,4,5,6];
+console.log(x,w, y); // 1 2 [3,4,5,6]
 ```
 
-### 简化了getter和setter方法，即：get和set关键字
+### 解构数组的默认值
+
+如果数组中的不是undefined，都会被成功解构, 不会被默认值替代
 
 ```javascript
-var obj = {
-  set _name(name) {
-    this.name = name;
-  },
-  get _name() {
-    return this.name;
-  }
-}
-obj._name = 'Joh';
-console.log(obj._name); // Joh
+let [x=15, y] = [undefined, 12];
+console.log(x,y); // 15 12
+let [m=12, n] = [null, 10];
+console.log(m, n); // null 10
 ```
 
-### 之前动态添加新属性的写法
+### 字符串解构的处理
 
 ```javascript
-var obj = {
-  name:1
-};
-obj['x'] = 2;
-obj.y = 3;
-```
-
-### ES6 中动态添加新属性的写法
-
-```javascript
-var obj = {
-  name:1,
-  ['x']:2,
-  ['y']:3
-}
-```
-
-代码更少更方便
-
-### 在nodejs中导出对象的方法改进
-
-```javascript
-var obj1 = {};
-var obj2 = {};
-
-module.exports = {obj1, obj2}; // 新的方式
-
-/*
-
-旧的方式：
-module.exports.obj1 = obj1;
-module.exports.obj2 = obj2;
-
-甚至:
-
-module.exports = {
-  obj1:obj1,
-  obj2:obj2
-}
-
-*/
+var [a,b,c] = 'hello';
+console.log(a,b,c); // h e l
 ```
