--- a/javascript/contents/75.md
+++ b/javascript/contents/75.md
@@ -1,106 +1,97 @@
-在ES6中针对对象的方法做了一些扩展和优化，下面简单总结下常用的方法
+> ES6 允许按照一定模式，从数组和对象中提取值，对变量进行赋值，这被称为解构（Destructuring）, 在对象的解构赋值中有一些需要注意的事项
 
-### is方法判断两个对象是否全等
-
-```javascript
-console.log(Object.is({},{}), {} === {}); // false, false
-console.log(Object.is(NaN,NaN), NaN === NaN); // true, false
-console.log(Object.is(+0,-0), +0 === -0); // false, true
-```
-
-### assign方法用于对象属性的拷贝
-
-如果两个参数，把第二个参数中可枚举的属性拷贝到第一个参数对象中, 仅限于可枚举的属性，如果有多个参数，那么同样拷贝
+### 初识对象的解构
 
 ```javascript
-var obj = {};
-var obj2 = Object.assign(obj,{name:'Joh'},{age:10});
-
-console.log(obj === obj2, obj); // true, {name:'Joh', age:10}
-console.log(Object.is(obj,obj2)); // true
-```
-
-相同属性的覆盖拷贝
-
-```javascript
-const DEFAULT_OPTIONS = {
-  name:"Joh"
+var {name} = {
+  name:'Joh',
+  age:10
 };
-function test(opts) {
-  let options = Object.assign({}, DEFAULT_OPTIONS, opts);
-  console.log(options);
-}
-test(); // {name: "Joh"}
-test({name:"Lily",age:10}); // {name: "Lily", age: 10}
+console.log(name); // Joh
 ```
 
-Symbol属性同样拷贝
+通过解构的形式取出对象中的属性值
+
+### 对解构出的属性进行重命名
 
 ```javascript
-var skey1 = Symbol('test');
-var skey2 = Symbol('test');
-var obj = {};
-Object.assign(obj,{name:'Joh'},{age:10},{[skey1]: 'I am test1'},{[skey2]: 'I am test2'}); // 拷贝
-// 验证Symbol的拷贝成功
-console.log(obj[skey1]); // I am test
-console.log(obj); // {name: "Joh", age: 10, Symbol(test): "I am test1", Symbol(test): "I am test2"}
+var {name} = {
+  name:'Joh',
+  age:10
+};
+console.log(name); // Joh
+
+// 通过{属性：新的名称} = 对象的方式 对解构出的属性进行重命名
+var {color:color2} = {
+  color:'red',
+  age:10
+};
+console.log(color2); // red
+console.log(color); // 此处报错：Uncaught ReferenceError: color is not defined
+```
+
+### 对象嵌套解构中模式和变量的区别
+
+```javascript
+    var obj = {
+      a:{
+        b:{
+          c:123
+        }
+      }
+    };
+    let {a:{b:{c}}} = obj; // 针对嵌套解构的最终输出只能是最里层的，外层的a和b都作为解构中的一种模式存在，而不是变量，只有c能正常输出
+    console.log(c); // 123
+    console.log(a, b, c); // Uncaught ReferenceError: a is not defined 报错之后停止
+```
+
+### 解析对象的默认值
+
+```javascript
+var obj = {
+  name:'Joh',
+  age:22
+};
+var {name, id='999', age} = obj;
+console.log(name, id ,age); // Joh 999 22
+
+var obj2 ={
+  name:'Lily',
+  age:10
+};
+
+var {name:name2, id:id2='888', age:age2} = obj2;
+console.log(name2, id2, age2); // Lily 888 10
+```
+
+### 解构对象中可能出现的异常
+
+① 父解构的节点为undefined，在编程中一定要注意这个，属于粗心错误 : 
+
+```javascript
+let {x:{y}} = {name:{y:12}}; // 父结构中没有x属性名, 错误：Cannot destructure property `y` of 'undefined' or 'null'.
+```
+
+② 事先定义了一个变量重名错误 : 
+
+```javascript
+let name;
+let {name} = {name:'Joh'}; // Uncaught SyntaxError: Identifier 'name' has already been declared
 
 ```
 
-### Object方法：keys，getOwnPropertyNames， getOwnPropertySymbols，getOwnPropertyDescriptor的应用
+解决方案1：
 
 ```javascript
-class A {
-  constructor() {
-    this.name = 'Joh';
-  }
+let name;
+let {name:name2} = {name:'Joh'};
+console.log(name2);
+```
 
-  [Symbol('fullnameA')] () {
+解决方案2：
 
-  }
-  getName() {
-
-  }
-}
-class B extends A {
-  constructor() {
-    super();
-    this.age = 22;
-  }
-
-  [Symbol('fullnameB')] () {
-
-  }
-  getAge() {
-
-  }
-}
-
-B.prototype.getColor = function () {};
-
-var b = new B();
-// 备注：只能获取【自身可枚举属性】，但得不到【原型链上的属性(比如方法) + Symbols属性】
-console.log(Object.keys(b)); // ["name", "age"] 
-
-// 备注：可获取【可枚举属性】,但得不到【原型链上的属性 + Symbols属性】
-console.log(Object.getOwnPropertyNames(b)); // ["name", "age"] 
-
-// 使用keys怎么也得不到原型链上不可枚举的属性[通过语法糖创建的方法]
-console.log(Object.keys(B.prototype)); // ["getColor"]
-// 使用 getOwnPropertyNames 传入prototype 可以得到原型链上的属性
-console.log(Object.getOwnPropertyNames(B.prototype)); // ["constructor", "getColor", "getAge"]
-
-// 通过getOwnPropertySymbols可以得到自身Symbols属性，但得不到继承的Symbol属性
-console.log(Object.getOwnPropertySymbols(B.prototype)); // [Symbol(fullnameB)]
-
-// 获取自身可枚举属性包括继承过来的，备注：通过class内部的语法糖创建的方法是不可枚举的，但是通过后期B.prototype.出来的是可枚举的
-for(let key in b) {
-  console.log(key); // 依次输出 name 和 age 和 getColor
-}
-
-// 描述对象 测试可枚举性
-console.log(Object.getOwnPropertyDescriptor(B.prototype,'getColor'));
-console.log(Object.getOwnPropertyDescriptor(B.prototype,'getColor').enumerable); // true
-console.log(Object.getOwnPropertyDescriptor(B.prototype,'getAge').enumerable); // false
-
+```javascript
+var name;
+var {name} = {name:'Joh'};
+console.log(name);
 ```
