--- a/javascript/contents/76.md
+++ b/javascript/contents/76.md
@@ -1,32 +1,83 @@
-### 字符串includes,startsWith,endsWith方法测试
+> 在ES6中， 函数的参数也可以使用解构赋值和默认值的设置，下面我们来看下
 
-普通的用法：
-
-```javascript
-var str = 'Hello';
-console.log(str.indexOf('o')); // 4
-console.log(str.includes('e')); // true
-console.log(str.startsWith('H')); // true
-console.log(str.endsWith('e')); // false
-```
-
-添加第二个参数之后，标注查询的起始位置：
+### 在ES6之前设置函数默认值的写法
 
 ```javascript
-var str = 'Hello';
-console.log(str.includes('e',1)); // true
-console.log(str.startsWith('e',1)); // true
-console.log(str.endsWith('l',3)); // true
+function test(x,y) {
+  x = x || 12;
+  y = y || 22;
+  console.log(x,y);
+}
+test(); // 12 22
+test(1,2) // 1 2
 ```
 
-### 实用的repeat方法
+### 在ES6中给函数参数赋默认值
 
 ```javascript
-var str = 'Hello';
-var res = str.repeat(3);
-console.log(res); // HelloHelloHello
+function test(x=12, y=22) {
+  console.log(x,y);
+}
+test(); // 12 22
+test(3,4); // 3 4
 ```
 
-### String 中更多的API【官方文档】用时可查询
+### ES6中函数数组参数的默认值
 
-- https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String
+```javascript
+function test([x=2,y=1]) {
+  console.log(x, y);
+}
+
+test([]); // 2, 1
+test([3,4]) // 3 4
+test();  // 报错： Uncaught TypeError: Cannot read property 'Symbol(Symbol.iterator)' of undefined
+
+```
+
+解决上述最后一个错误：使用默认数组来匹配没有参数的情形
+
+```javascript
+function test([x=2,y=1]=[]) {
+  console.log(x, y);
+}
+test();   // 2 1
+```
+
+更多应用：
+
+```javascript
+function test([x=2,y=1]=[], z=90) {
+  console.log(x, y, z);
+}
+test();   // 2 1 90
+test(undefined, 80); // 2 1 80
+test('', 50); // 2 1 50 正常输出
+// test(null, 80); // 报错，不能填入null Uncaught TypeError: Cannot read property 'Symbol(Symbol.iterator)' of object
+// test(NaN, 60); // 报错： Uncaught TypeError: undefined is not a function
+```
+
+注意上面函数参数可以接受undefined，但不能接受null和NaN
+
+下面则是更复杂的应用
+
+```javascript
+function test([x=2,[y=3,w=4]=[]]=[], z=90) {
+  console.log(x, y, w, z);
+}
+test(); // 2 3 4 90
+test(undefined, undefined); // 2 3 4 90
+test(undefined, 8); // 2 3 4 8
+test([5,[]],12); // 5 3 4 12
+test([5,[2,6]],12); // 5 2 6 12
+```
+
+注意其中的陷阱：
+
+```javascript
+function test([x,y]=[1,2]) {
+  console.log(x,y);
+}
+test(); // 1 2
+test([]); // undefined undefined
+```
