--- a/javascript/contents/79.md
+++ b/javascript/contents/79.md
@@ -1,108 +1,198 @@
-> ES6 允许按照一定模式，从数组和对象中提取值，对变量进行赋值，这被称为解构（Destructuring）, 而数组的解构赋值是从数组中提取值，按照对应位置，对变量赋值。
+> 目前浏览器还不能完全支持模块化，需要引入很多编译环境，下面在nodejs中来模拟ES6中的模块化
 
-### ES6之前的赋值操作
+### nodejs中针对模块化演示的配置
 
+- 环境的安装：$ `npm install --save babel-cli babel-preset-node6`
+
+- 运行：$ `./node_modules/.bin/babel-node.js --presets node6 ./your_script.js`
+
+- 添加.babelrc文件, 编辑如下
+ ```json
+{
+	  "presets": [
+		    "node6"
+	  ]
+}
+ ```
+ 添加了这个文件，无需在运行时添加--presets参数
+
+- 参考链接：https://stackoverflow.com/questions/33604470/unexpected-token-import-in-nodejs5-and-babel
+
+### 导出变量的三种模式
+
+test1模块：
 ```javascript
-var arr = [1,2,3];
-var a = arr[0];
-var b = arr[1];
-var c = arr[2];
-console.log(a,b,c); // 1 2 3
+// 写法1
+export var a = "I am a";
+
+// 写法2
+var b = "I am b";
+export {b};
+
+// 写法3
+var c = "I am c";
+export {c as d} // 将c重名为d, 外部也同样需要 import d
 ```
 
-### 对一维数组的解构赋值的应用
+index 模块：
 
 ```javascript
-var arr = [1,2,3];
-var [a,b,c] = arr;
-console.log(a,b,c); // 1 2 3
+import {a, b, d} from './test1'; 
+
+console.log(a); // I am a
+console.log(b); // I am b
+console.log(d); // I am c
 ```
 
-### 对多维数组的解构赋值的应用
+### 异步导出模块的测试
 
+test2模块 ： 
 ```javascript
-let arr = [22, [5,8], 11];
-let [a,[b,c],d] = arr;
-console.log(a,b,c,d); // 22 5 8 11
+// 异步写法
+var m = "I am m";
+export {m};
+setTimeout(()=>{
+  m = "I am mm";
+},1000);
+
 ```
 
-### 解构赋值用于变量的交换举例
+index模块
 
 ```javascript
-let x = 11;
-let y = 22;
-[y,x] = [x,y];
-console.log(x,y); // 22 11
+import {m} from './test2'; 
+
+console.log(m); // I am m
+
+setTimeout(()=>{
+  console.log(m); // I am mm
+},1500);
 ```
 
-### 解构赋值中不完全的解析示例
+### 多模块分别导出
 
+test3 模块
 ```javascript
-let arr = [22, [5,8], 11];
-let [a,[b],c] = arr;
-console.log(a, b, c); // 22 5 11
+var A = 1111,
+  B = 2222,
+  C = 3333;
 
-let [m,[,n],o] = arr;
-console.log(m, n, o); // 22 8 11
+var M = 'M';
+
+export default M;
+
+export {A as A1, B as B1, C as C1};
 ```
 
-### 不能被数组解析的值
+index 模块 ：
 
 ```javascript
-let [m] = "";
-console.log(m); // undefined;
-let [x,y] = NaN; // NaN is not iterable. 不能被数组解析的值：NaN, undefined, null, {}
+import M, {A1, B1, C1} from './multi'; 
+
+console.log(A1); // 1111
+console.log(B1); // 2222
+console.log(C1); // 3333
+console.log(M); // M
 ```
 
-### 实现了iterator接口的类型都可以被解析赋值
+### 对象的导出
+
+User 模块 ：
 
 ```javascript
-let [x,y] = new Set([22, 33]);
-console.log(x,y); // 22 33
-```
-
-### 自己创造一个实现iterator接口的对象进行解构赋值
-
-```javascript
-class Group{
-  constructor() {
-
+export class User{
+  constructor(name){
+    this.name = name;
   }
 
-  next() {
-    return {value:'Joh', done: false};
+  get uname() {
+    return this.name;
   }
 
-  [Symbol.iterator]() {
-    return this;
+  set uname(name) {
+    this.name = name;
   }
 }
-let group = new Group();
-let [x,y,z,m,n] = group;
-console.log(x,y,z,m,n);  // Joh Joh Joh Joh Joh 备注：这里如果类中的next的done为true，那么全为undefined
 ```
 
-### ... 运算符 转换成数组的解构举例
+index 模块 ：
 
 ```javascript
-var [x,w, ...y] = [1,2,3,4,5,6];
-console.log(x,w, y); // 1 2 [3,4,5,6]
+import {User} from './User'; 
+
+var user = new User('Joh');
+console.log(user.uname); // Joh
+user.uname = 'Lily';
+console.log(user.uname); // Lily
+
 ```
 
-### 解构数组的默认值
+### 导出函数模块
 
-如果数组中的不是undefined，都会被成功解构, 不会被默认值替代
+func 模块
 
 ```javascript
-let [x=15, y] = [undefined, 12];
-console.log(x,y); // 15 12
-let [m=12, n] = [null, 10];
-console.log(m, n); // null 10
+export function Log(str) {
+  console.log(str); 
+}
 ```
 
-### 字符串解构的处理
+index 模块
 
 ```javascript
-var [a,b,c] = 'hello';
-console.log(a,b,c); // h e l
+Log("I am log"); // I am log
 ```
+
+### 重命名默认模块
+
+rename 模块：
+```javascript
+export default "rename";
+```
+
+index 模块：
+
+```javascript
+import {default as nr} from './rename';
+console.log(nr); // rename
+```
+
+### 默认模块和其他模块一起导出的方式
+
+combine 模块：
+
+```javascript
+export var a = 1;
+export default 111;
+```
+
+方式1：
+
+index 模块：
+
+```javascript
+import {default as com, a as comA} from './com';
+
+console.log(com); // 111
+console.log(comA); // 1
+```
+
+方式2：
+
+index 模块：
+
+```javascript
+import t, { a as comA} from './com';
+
+console.log(t); // 111 备注这里t可以以任何名称命名
+console.log(comA); // 1
+```
+
+### 其他注意事项
+
+- 定义export时必须在顶层定义，其他地方是不能定义的，如函数内部
+- default后面不能带var导出，如：export default var name = 'Joh'; 这样是不对的
+- 不要import * 导出全部模块，这样非常不好，不利于优化
+- {} 导入的不是默认模块，默认模块不需要带{}
+- 通过default导出的不会再次被修改，如果default导出的是一个数字变量，即使在其他地方修改了，它也不会被修改，保持原值不变
+- http://es6.ruanyifeng.com/#docs/module 这里有其他一些注意事项的总结
