--- a/javascript/contents/80.md
+++ b/javascript/contents/80.md
@@ -1,97 +1,91 @@
-> ES6 允许按照一定模式，从数组和对象中提取值，对变量进行赋值，这被称为解构（Destructuring）, 在对象的解构赋值中有一些需要注意的事项
 
-### 初识对象的解构
 
-```javascript
-var {name} = {
-  name:'Joh',
-  age:10
-};
-console.log(name); // Joh
+### 项目的初始化
+
+- 在项目目录中执行，$ `npm init -y` 初始化操作
+- 安装jspm依赖：$ `sudo yarn add jspm --dev`
+- jspm初始化操作：$ ` ./node_modules/.bin/jspm init` 一路回车，选择输入 Babel
+
+ ```log
+ MacBook-Pro:20 Johnny$ ./node_modules/.bin/jspm init
+Would you like jspm to prefix the jspm package.json properties under jspm? [yes]:
+Enter server baseURL (public folder path) [./]:
+Enter jspm packages folder [./jspm_packages]:
+Enter config file path [./config.js]:
+Configuration file config.js doesn't exist, create it? [yes]:
+Enter client baseURL (public folder URL) [/]:
+Do you wish to use a transpiler? [yes]:
+Which ES6 transpiler would you like to use, Babel, TypeScript or Traceur? [babel]:Babel
+ok   Verified package.json at package.json
+     Verified config file at config.js
+     Looking up loader files...
+ ```
+等候下载完成
+
+### 项目结构展示
+
+index.html
+
+关键代码：
+
+```html
+<script src="jspm_packages/system.js"></script>
+<script src="config.js"></script>
+<script>
+	System.import('./main.js');
+</script>
 ```
 
-通过解构的形式取出对象中的属性值
-
-### 对解构出的属性进行重命名
+main.js模块 :
 
 ```javascript
-var {name} = {
-  name:'Joh',
-  age:10
-};
-console.log(name); // Joh
+import moduleA from './modules/a';
+import moduleB from './modules/b';
 
-// 通过{属性：新的名称} = 对象的方式 对解构出的属性进行重命名
-var {color:color2} = {
-  color:'red',
-  age:10
-};
-console.log(color2); // red
-console.log(color); // 此处报错：Uncaught ReferenceError: color is not defined
+moduleA();
+moduleB();
 ```
 
-### 对象嵌套解构中模式和变量的区别
+modules/a 模块：
 
 ```javascript
-    var obj = {
-      a:{
-        b:{
-          c:123
-        }
-      }
-    };
-    let {a:{b:{c}}} = obj; // 针对嵌套解构的最终输出只能是最里层的，外层的a和b都作为解构中的一种模式存在，而不是变量，只有c能正常输出
-    console.log(c); // 123
-    console.log(a, b, c); // Uncaught ReferenceError: a is not defined 报错之后停止
+export default function () {
+  console.log('module A');
+}
 ```
 
-### 解析对象的默认值
+modules/b 模块：
 
 ```javascript
-var obj = {
-  name:'Joh',
-  age:22
-};
-var {name, id='999', age} = obj;
-console.log(name, id ,age); // Joh 999 22
-
-var obj2 ={
-  name:'Lily',
-  age:10
-};
-
-var {name:name2, id:id2='888', age:age2} = obj2;
-console.log(name2, id2, age2); // Lily 888 10
+export default function () {
+  console.log('module B');
+}
 ```
 
-### 解构对象中可能出现的异常
+使用http模块的形式访问，既能够输出
 
-① 父解构的节点为undefined，在编程中一定要注意这个，属于粗心错误 : 
-
-```javascript
-let {x:{y}} = {name:{y:12}}; // 父结构中没有x属性名, 错误：Cannot destructure property `y` of 'undefined' or 'null'.
+```log
+module A
+module B
 ```
 
-② 事先定义了一个变量重名错误 : 
+### 关于jspm init时候 一直download不成功的问题
 
-```javascript
-let name;
-let {name} = {name:'Joh'}; // Uncaught SyntaxError: Identifier 'name' has already been declared
-
+我原来电脑上的hosts文件设置，为了防止github无法ping通来设置的
+```log
+192.30.253.113    github.com
+192.30.252.131 github.com
+185.31.16.185 github.global.ssl.fastly.net
+74.125.237.1 dl-ssl.google.com
+173.194.127.200 groups.google.com
+192.30.252.131 github.com
+185.31.16.185 github.global.ssl.fastly.net
+74.125.128.95 ajax.googleapis.com
 ```
 
-解决方案1：
+我把这个全部删除就能够正常下载了
 
-```javascript
-let name;
-let {name:name2} = {name:'Joh'};
-console.log(name2);
-```
+网上的一些jsmp无法正常使用的讨论：
 
-解决方案2：
-
-```javascript
-var name;
-var {name} = {name:'Joh'};
-console.log(name);
-```
+- https://github.com/jspm/registry/issues/541
+- https://github.com/jspm/jspm-cli/issues/10
