--- a/javascript/contents/82.md
+++ b/javascript/contents/82.md
@@ -1,40 +1,75 @@
-同函数数组参数一样，函数的对象参数的默认值和解构过程整理
+## 构造函数模式
 
-### 函数对象参数的默认值与解构的形式
+> 构造函数用于创建特定类型的对象， 不仅声明了使用的对象，构造函数还可以接受参数以便第一次创建对象的时候设置对象的成员值。你可以自定义自己的构造函数，然后在里面声明自定义类型对象的属性或方法。构造函数通常是认为用来实现实例的，js里没有类的概念，但是有特殊的构造函数。通过new关键字来调用自定义的构造函数，在构造函数内部，this关键字引用的是新创建的对象。
 
-此处使用箭头函数来处理 ： 
+## 构造函数模式的作用
 
-```javascript
-(({x,y})=>{
-  console.log(x, y); // // undefined undefined
-})({});
+1. 用于创建特定类型的对象。
+2. 第一次声明的时候给对象赋值。
+3. 自己声明构造函数，赋予属性和方法。
 
-(({x=1,y=2})=>{
-  console.log(x,y); // 1 2
-})({});
+## 构造函数模式的注意事项：
 
-(({x=3, y=4}={})=>{
-  console.log(x,y); // 3 4
-})();
-```
+1. 声明函数时处理业务逻辑
+2. 区分和单例的差别，配合单例实现初始化化
+3. 构造函数大写字母开头 (建议)
+4. 注意new的成本 (继承问题，比如公用的函数放到原型中)
 
-### 注意传值解析中可能的陷阱
+## 构造模式的实现
 
 ```javascript
-function test4({x,y}={x:100,y:200}) {
-  console.log(x,y);
+function Door(lock,color) {
+  this.lock = lock || 'new lock';    
+  this.color = color || 'red';
+
+  this.create = function () {
+    return 'lock: ' + this.lock + '; color: ' + this.color;
+  }
 }
 
-test4({}); // undefined undefined
-test4(); // 100 200
+var door1 = new Door('old lock', 'black');
+var res1 = door1.create();
+console.log(res1);
+
+var door2 = new Door('fancy lock', 'brown');
+var res2 = door2.create();
+console.log(res2);
+
 ```
 
-### 对象参数，数组参数和字符参数的结合使用
+## 构造模式和单例模式的结合使用
+
+这里模拟AA厂商和BB厂商都造门
 
 ```javascript
-function test({x=1,y=2,z=3}={}, [a=11,b=22,c=33]=[],name='Joh') {
-  console.log(x,y,z,a,b,c,name);
+// AA 厂商
+var AA = {
+  door: function (lock,color) {
+    this.lock = lock || 'new lock';    
+    this.color = color || 'red';
+
+    this.create = function () {
+      return 'lock: ' + this.lock + '; color: ' + this.color;
+    }
+  }
 }
 
-test(); // 1 2 3 11 22 33 "Joh"
+// BB 厂商
+var BB = {
+  door: function (lock,color) {
+    this.lock = lock || 'new lock';    
+    this.color = color || 'red';
+
+    this.create = function () {
+      return 'lock: ' + this.lock + '; color: ' + this.color;
+    }
+  }
+}
+
+var aaDoor = new AA.door('AA good', 'red');
+var bbDoor = new BB.door('BB good', 'yellow');
+
+console.log(aaDoor.create()); // lock: AA good; color: red
+console.log(bbDoor.create()); // lock: BB good; color: yellow
+
 ```
