--- a/javascript/contents/84.md
+++ b/javascript/contents/84.md
@@ -1,198 +1,70 @@
-> 目前浏览器还不能完全支持模块化，需要引入很多编译环境，下面在nodejs中来模拟ES6中的模块化
+## 工厂模式
 
-### nodejs中针对模块化演示的配置
+> 工厂模式定义一个用于创建对象的接口，这个接口由子类决定实例化哪一个类。该模式使一个类的实例化延迟到了子类。而子类可以重写接口方法以便创建的时候制定自己的对象类型(抽象工厂)
 
-- 环境的安装：$ `npm install --save babel-cli babel-preset-node6`
+## 工厂模式的作用
 
-- 运行：$ `./node_modules/.bin/babel-node.js --presets node6 ./your_script.js`
+- 对象的构建十分复杂
+- 需要依赖具体的环境创建不同的实例
+- 处理大量具有相同属性的小对象
 
-- 添加.babelrc文件, 编辑如下
- ```json
-{
-	  "presets": [
-		    "node6"
-	  ]
+## 工厂模式的注意事项
+
+- 不能滥用工厂，仅仅会给代码增加复杂度
+
+## 工厂模式的实现
+
+简单工厂的实现
+
+```javascript
+// 工厂对象
+var factory = {};
+factory.createClothes = function(){
+  this.workers = 30;
+  console.log('clothes ok');
+};
+factory.createShoes = function(){
+  this.workers = 100;
+  console.log('shoes ok');
+};
+factory.transport = function () {
+  this.cars = 5;
+  console.log('transport ok');
 }
- ```
- 添加了这个文件，无需在运行时添加--presets参数
 
-- 参考链接：https://stackoverflow.com/questions/33604470/unexpected-token-import-in-nodejs5-and-babel
+// 工程中的厂长
+factory.director = function (params) {
+  // 厂长发布命令去造一条生产线或运输线
+  return new factory[params]();
+}
 
-### 导出变量的三种模式
-
-test1模块：
-```javascript
-// 写法1
-export var a = "I am a";
-
-// 写法2
-var b = "I am b";
-export {b};
-
-// 写法3
-var c = "I am c";
-export {c as d} // 将c重名为d, 外部也同样需要 import d
-```
-
-index 模块：
-
-```javascript
-import {a, b, d} from './test1'; 
-
-console.log(a); // I am a
-console.log(b); // I am b
-console.log(d); // I am c
-```
-
-### 异步导出模块的测试
-
-test2模块 ： 
-```javascript
-// 异步写法
-var m = "I am m";
-export {m};
-setTimeout(()=>{
-  m = "I am mm";
-},1000);
+var transportStuff = factory.director('transport');
+console.log(transportStuff.cars); // 5
 
 ```
 
-index模块
+抽象工厂的实现
 
 ```javascript
-import {m} from './test2'; 
-
-console.log(m); // I am m
-
-setTimeout(()=>{
-  console.log(m); // I am mm
-},1500);
-```
-
-### 多模块分别导出
-
-test3 模块
-```javascript
-var A = 1111,
-  B = 2222,
-  C = 3333;
-
-var M = 'M';
-
-export default M;
-
-export {A as A1, B as B1, C as C1};
-```
-
-index 模块 ：
-
-```javascript
-import M, {A1, B1, C1} from './multi'; 
-
-console.log(A1); // 1111
-console.log(B1); // 2222
-console.log(C1); // 3333
-console.log(M); // M
-```
-
-### 对象的导出
-
-User 模块 ：
-
-```javascript
-export class User{
-  constructor(name){
-    this.name = name;
-  }
-
-  get uname() {
-    return this.name;
-  }
-
-  set uname(name) {
-    this.name = name;
+// 抽象工厂的实现 打个比方：大厂
+var AbstractFactory = function(){};
+AbstractFactory.prototype = {
+  // 在这个工厂中不干什么事，只定义接口(规范)而不实现    
+  createFactory:function() {
+    throw new Error('This is an abstract method');
   }
 }
-```
 
-index 模块 ：
-
-```javascript
-import {User} from './User'; 
-
-var user = new User('Joh');
-console.log(user.uname); // Joh
-user.uname = 'Lily';
-console.log(user.uname); // Lily
-
-```
-
-### 导出函数模块
-
-func 模块
-
-```javascript
-export function Log(str) {
-  console.log(str); 
+// 子类的小厂 
+var SmallFactory = function () {
+  AbstractFactory.call(this);
 }
+// 这里继承父类
+SmallFactory.prototype = new AbstractFactory();
+SmallFactory.prototype.constructor = SmallFactory; // 将constructor指向自身
+// 这里实现父类(抽象工厂)的方法 （父类只定义规范而不实现，由子类实现）
+SmallFactory.prototype.createFactory = function () {
+  console.log('small');
+}
+
 ```
-
-index 模块
-
-```javascript
-Log("I am log"); // I am log
-```
-
-### 重命名默认模块
-
-rename 模块：
-```javascript
-export default "rename";
-```
-
-index 模块：
-
-```javascript
-import {default as nr} from './rename';
-console.log(nr); // rename
-```
-
-### 默认模块和其他模块一起导出的方式
-
-combine 模块：
-
-```javascript
-export var a = 1;
-export default 111;
-```
-
-方式1：
-
-index 模块：
-
-```javascript
-import {default as com, a as comA} from './com';
-
-console.log(com); // 111
-console.log(comA); // 1
-```
-
-方式2：
-
-index 模块：
-
-```javascript
-import t, { a as comA} from './com';
-
-console.log(t); // 111 备注这里t可以以任何名称命名
-console.log(comA); // 1
-```
-
-### 其他注意事项
-
-- 定义export时必须在顶层定义，其他地方是不能定义的，如函数内部
-- default后面不能带var导出，如：export default var name = 'Joh'; 这样是不对的
-- 不要import * 导出全部模块，这样非常不好，不利于优化
-- {} 导入的不是默认模块，默认模块不需要带{}
-- 通过default导出的不会再次被修改，如果default导出的是一个数字变量，即使在其他地方修改了，它也不会被修改，保持原值不变
-- http://es6.ruanyifeng.com/#docs/module 这里有其他一些注意事项的总结
