--- a/javascript/contents/85.md
+++ b/javascript/contents/85.md
@@ -1,91 +1,41 @@
+## 外观模式
 
+> 外观模式(Facade)为子系统中的一组接口提供了一个一致的界面，此模块定义了一个高层接口，这个接口使得这一子系统更加容易使用。 外观模式不仅简化类中的接口，而且对接口与调用者也进行了解耦，外观模式经常被认为开发者必备，它可以将一些复杂操作封装起来，并创建一个简单的接口用于调用。
 
-### 项目的初始化
+## 外观模式的作用
 
-- 在项目目录中执行，$ `npm init -y` 初始化操作
-- 安装jspm依赖：$ `sudo yarn add jspm --dev`
-- jspm初始化操作：$ ` ./node_modules/.bin/jspm init` 一路回车，选择输入 Babel
+- 在设计初期，应该要有意识地将不同的两个层分离，比如经典的三层结构。
+- 在开发阶段，子系统往往因为不断的重构演化而变得越来越复杂，增加外观模式可以提供一个简单的接口，减少他们之间的依赖。
+- 在维护阶段为系统开发一个外观Facade类，为设计粗糙和高度复杂的遗留代码提供比较清晰的接口，让新系统和Facade对象交互。
 
- ```log
- MacBook-Pro:20 Johnny$ ./node_modules/.bin/jspm init
-Would you like jspm to prefix the jspm package.json properties under jspm? [yes]:
-Enter server baseURL (public folder path) [./]:
-Enter jspm packages folder [./jspm_packages]:
-Enter config file path [./config.js]:
-Configuration file config.js doesn't exist, create it? [yes]:
-Enter client baseURL (public folder URL) [/]:
-Do you wish to use a transpiler? [yes]:
-Which ES6 transpiler would you like to use, Babel, TypeScript or Traceur? [babel]:Babel
-ok   Verified package.json at package.json
-     Verified config file at config.js
-     Looking up loader files...
- ```
-等候下载完成
+## 外观模式的注意事项
 
-### 项目结构展示
+- 外观模式被开发者连续使用时会产生一定的性能问题，因为在每次调用时都要检测功能的可用性。
 
-index.html
-
-关键代码：
-
-```html
-<script src="jspm_packages/system.js"></script>
-<script src="config.js"></script>
-<script>
-	System.import('./main.js');
-</script>
-```
-
-main.js模块 :
+## 外观模式实战
 
 ```javascript
-import moduleA from './modules/a';
-import moduleB from './modules/b';
-
-moduleA();
-moduleB();
-```
-
-modules/a 模块：
-
-```javascript
-export default function () {
-  console.log('module A');
+// 商店对象
+var shop = {};
+// 商店内制造食物
+shop.createFood = function() {
+  console.log('Food ok');
 }
-```
-
-modules/b 模块：
-
-```javascript
-export default function () {
-  console.log('module B');
+// 商店内制造饮料
+shop.createDrink = function () {
+  console.log('Drink ok');
 }
+// 商店内提供服务
+shop.service = function () {
+  this.createFood(); // 提供食物
+  this.createDrink(); // 提供饮料
+}
+// 商店开门营业
+shop.open = function () {
+  return this.service(); // 提供服务
+}
+
+// 调用门面(外观)
+shop.open();
+
 ```
-
-使用http模块的形式访问，既能够输出
-
-```log
-module A
-module B
-```
-
-### 关于jspm init时候 一直download不成功的问题
-
-我原来电脑上的hosts文件设置，为了防止github无法ping通来设置的
-```log
-192.30.253.113    github.com
-192.30.252.131 github.com
-185.31.16.185 github.global.ssl.fastly.net
-74.125.237.1 dl-ssl.google.com
-173.194.127.200 groups.google.com
-192.30.252.131 github.com
-185.31.16.185 github.global.ssl.fastly.net
-74.125.128.95 ajax.googleapis.com
-```
-
-我把这个全部删除就能够正常下载了
-
-网上的一些jsmp无法正常使用的讨论：
-
-- https://github.com/jspm/registry/issues/541
-- https://github.com/jspm/jspm-cli/issues/10
