--- a/javascript/contents/63.md
+++ b/javascript/contents/63.md
@@ -1,150 +1,293 @@
-> 设计模式 (Design pattern) 是一套被反复使用、思想成熟、经过分类和无数实战设计经验的总结的。使用设计模式是为了让系统代码可重用、可扩展、可解耦、更容易被人理解且能保证代码的可靠性。设计模式使代码开发真正工程化，设计模式是软件工程的基石脉络，如同大厦结构一样。只有夯实地基打好结构，才能盖好高楼大厦。
+> The Promise object represents the eventual completion (or failure) of an asynchronous operation, and its resulting value.
+> <br>
+> Promise 对象用于一个异步操作的最终完成（或失败）及其结果值的表示。简单点说，它就是用于处理异步操作的，异步处理成功了就执行成功的操作，异步处理失败了就捕获错误或者停止后续操作。
 
-## 为什么要有设计模式？
-
-- 为了代码的复用，增加可维护性
-
-## 设计模式的原则
-
-- __开闭原则__：对扩展开放，对修改关闭。比如生活中只往上盖楼，而不拆楼(改变楼的结构)
-- __里氏转换原则__：子类继承父类，单独调完全可以，比如：小狗是动物，我们可以调用小狗的睡觉和吃饭方法，不影响父类
-- __依赖倒转原则__：引用一个对象，如果这个对象有底层类型，直接引用底层，比如：从井里打出的水倒入桶里, 这个水可以是井里的，也可以是桶里的，这里的底层就是井里的水。
-- __接口隔离原则__：每一个接口应该是一种角色，职责单一，互不影响。比如：每把钥匙开一把锁。
-- __合成/聚合复用原则__：新的对象应该使用一些已有的对象，使之成为新对象的一部分，比如：手里有一些相机的零件，而又去买了一个新的相机。
-- __迪米特原则__：一个对象应对其他对象有尽可能少的了解，也就是高内聚，低耦合，尽可能减少组件之间的联系，解耦合。比如：不要把牙刷和鞋刷搞在一起。
-
-总之，通过设计模式的这些原则，就可以站在巨人的肩膀上Hold住系统架构。
-
-## 设计模式之单例模式
-
-1） 单例模式是什么？
-
-单例就是保证一个类只有一个实例，实现的方法一般是先判断实例存在与否，如果存在直接返回，如果不存在，创建了再返回，这就确保一个类只有一个实例对象，在js中，单例作为一个命名空间提供者，从全局命名空间里提供一个唯一的访问点来访问该对象。
-
-2） 单例模式的作用：
-
-- 模块之间通信
-- 系统中某个类的对象只能存在一个
-- 保护自己的属性和方法
-
-3） 单例模式中的注意事项：
-- 注意this的使用
-- 注意闭包容易造成内存泄露，不需要的要赶快回收
-- 注意new的成本，比如：直接声明一个字面量的形式来初始化字符串比通过`new String()`的方式成本要低
-
-4） 单例模式展示：
-
-- 例子：使用单例模式来表示：Joh和Lily两个人之间通信的过程：
+### 在promise之前处理异步回调的方式
 
 ```javascript
-
-var Joh = (function(argument){
-  // 内部有一个屋子对象
-  JohHouse = function(message) {
-    this.doorbell = message; // 门铃作为信息通道,这里门铃就代表了信息
-  };
-  var door; // 初始化一个门
-  var info = {
-    // 发送消息的方法
-    sendMessage:function(message){
-      // 这就是单例模式中的没有了创建，再返回
-      if(!door) {
-        door = new JohHouse(message);
-      }
-      return door;
+function asyncFun(a,b,callback) {
+      setTimeout(function () {
+        callback(a+b);
+      },200);
     }
-  };
-  return info; // Joh 就是这个 info
-})();
 
-var Lily = {
-  callJoh:function(msg) {
-    var door = Joh.sendMessage(msg); // 此处sendMessage函数是一个闭包
-    alert(door.doorbell);
-    door = null; // 用完回收
+    asyncFun(1,2, function (res) {
+      if(res > 2) {
+        asyncFun(res, 2, function (res) {
+          if(res > 4) {
+            asyncFun(res, 2, function (res) {
+              console.log('ok');
+              console.log(res);
+            })
+          }
+        })
+      }
+    });
+```
+
+从上面可以看出所谓的"回调地狱"的可怕
+
+### 使用promise来优雅的处理异步
+
+```javascript
+function asyncFun(a,b) {
+  return new Promise(function (resolve, reject) {
+    setTimeout(function() {
+      resolve(a + b);
+    },200);
+  })
+}
+
+asyncFun(1,2)
+.then(function (res) {
+  if(res > 2) {
+    return asyncFun(res, 2);
+  }
+})
+.then(function (res) {
+  if(res > 4) {
+    return asyncFun(res, 2);
+  }
+})
+.then(function (res) {
+  console.log('ok');
+  console.log(res);
+})
+.catch(function (error) {
+  console.log(error);
+});
+```
+
+### 使用promise处理内部异常的举例
+
+```javascript
+function asyncFun(a,b) {
+  return new Promise(function (resolve, reject) {
+    // 模拟异常判断
+    if(typeof a !== 'number' || typeof b !== 'number') {
+      reject(new Error('no number'));
+    }
+    setTimeout(function() {
+      resolve(a + b);
+    },200);
+  })
+}
+
+asyncFun(1,2)
+.then(function (res) {
+  if(res > 2) {
+    return asyncFun(res, 2);
+  }
+},function (err) {
+  console.log('first err: ', err);
+})
+.then(function (res) {
+  if(res > 4) {
+    return asyncFun(res, 'a');
+  }
+},function (err) {
+  console.log('second err: ', err);
+})
+.then(function (res) {
+  console.log('ok');
+  console.log(res);
+},function (err) {
+  console.log('third err: ', err);
+});  
+```
+
+从上面可以看出通过then的第二个回调函数处理promise对象中的异常，通过reject返回异常的promise对象
+
+### 通过catch统一处理错误，通过finally执行最终必须执行的逻辑
+
+```javascript
+function asyncFun(a,b) {
+  return new Promise(function (resolve, reject) {
+    // 模拟异常判断
+    if(typeof a !== 'number' || typeof b !== 'number') {
+      reject(new Error('no number'));
+    }
+    setTimeout(function() {
+      resolve(a + b);
+    },200);
+  })
+}
+
+asyncFun(1,2)
+.then(function (res) {
+  if(res > 2) {
+    return asyncFun(res, 2);
+  }
+})
+.then(function (res) {
+  if(res > 4) {
+    return asyncFun(res, 'a');
+  }
+})
+.then(function (res) {
+  console.log('ok');
+  console.log(res);
+})
+.catch(function (error) {
+  console.log('catch: ', error);
+})
+.finally(function () {
+  console.log('finally: ', 1+2);
+});
+```
+
+### 通过Promise.all()静态方法来处理多个异步
+
+```javascript
+function asyncFun(a,b) {
+  return new Promise(function (resolve, reject) {
+    setTimeout(function() {
+      resolve(a + b);
+    },200);
+  })
+}
+
+var promise = Promise.all([asyncFun(1,2), asyncFun(2,3), asyncFun(3,4)])
+promise.then(function (res) {
+  console.log(res);  // [3, 5, 7]
+});
+```
+
+### 通过Promise.race()静态方法来获取多个异步中最快的一个
+
+```javascript
+function asyncFun(a,b,time) {
+  return new Promise(function (resolve, reject) {
+    setTimeout(function() {
+      resolve(a + b);
+    },time);
+  })
+}
+
+var promise = Promise.race([asyncFun(1,2,10), asyncFun(2,3,6), asyncFun(3,4,200)])
+promise.then(function (res) {
+  console.log(res);  // 5
+});
+```
+
+### 通过Promise.resolve() 静态方法来直接返回成功的异步对象
+
+```javascript
+var p = Promise.resolve('hello');
+p.then(function (res) {
+  console.log(res); // hello
+});
+```
+
+等同于，如下：
+
+```javascript
+var p = new Promise(function (resolve, reject) {
+  resolve('hello2');
+})
+p.then(function (res) {
+  console.log(res); // hello2
+});
+```
+
+### 通过Promise.reject() 静态方法来直接返回失败的异步对象
+
+```javascript
+var p = Promise.reject('err')
+p.then(null, function (res) {
+  console.log(res); // err
+});
+```
+
+等同于，如下：
+
+```javascript
+var p = new Promise(function (resolve, reject) {
+  reject('err2');
+})
+p.then(null, function (res) {
+  console.log(res); // err
+});
+```
+
+### 通过一个小例子来测试Promise在面向对象中应用
+
+```javascript
+'use strict';
+
+class User{
+  constructor(name, password) {
+    this.name = name;
+    this.password = password;
+  }
+
+  send() {
+    let name = this.name;
+    return new Promise(function (resolve, reject) {
+      setTimeout(function () {
+        if(name === 'leo') {
+          resolve('send success');
+        }else{
+          reject('send error');
+        }
+      });
+    });
+  }
+
+  validatePwd() {
+    let pwd = this.password;
+    return new Promise(function (resolve, reject) {
+      setTimeout(function () {
+        if(pwd === '123') {
+          resolve('validatePwd success');
+        }else{
+          reject('validatePwd error');
+        }
+      });
+    })
   }
 }
 
-Lily.callJoh('I am coming!'); // 弹出 I am coming!
+let user1 = new User('Joh');
+user1.send()
+  .then(function (res) {
+    console.log(res);
+  })
+  .catch(function (err) {
+    console.log(err);
+  });
+
+let user2 = new User('leo');
+user2.send()
+  .then(function (res) {
+    console.log(res);
+  })
+  .catch(function (err) {
+    console.log(err);
+  });
+
+let user3 = new User('leo', '123');
+user3.validatePwd()
+  .then(function (res) {
+    return user3.validatePwd();
+  })
+  .then(function (res) {
+    console.log(res);
+  })
+  .catch(function(error) {
+    console.log(error);
+  });
+
+let user4 = new User('leo', '1234');
+user4.validatePwd()
+  .then(function (res) {
+    return user4.validatePwd();
+  })
+  .then(function (res) {
+    console.log(res);
+  })
+  .catch(function(error) {
+    console.log(error);
+  });
 
 ```
-
-
-- 例子2：页面上按钮之间的通信
-
-```html
-<div class='topBar'>
-  <button id='a'>A</button>
-</div>
-
-<div class='banner'>
-  <button id='b'>B</button>
-</div>
-```
-
-```javascript
-var topBar = {
-  init:function() {
-    this.render();
-    this.bind();
-  },
-  a:4,
-  // render 函数用于获取页面元素
-  render:function(){
-    this.btnA = document.getElementById('a');
-  },
-  // bind 函数用于绑定事件
-  bind:function() {
-    var me = this;
-    // 绑定点击事件 更新自身
-    this.btnA.onclick = function () {
-      me.change();
-      console.log(me.a); // 输出当前的a
-    }
-  },
-  change:function() {
-    this.a = 5;
-  }
-};
-
-var banner = {
-  init:function() {
-    this.render();
-    this.bind();
-  },
-  // render 函数用于获取页面元素
-  render:function(){
-    this.btnB = document.getElementById('b');
-  },
-  // bind 函数用于绑定事件
-  bind:function() {
-    var me = this;
-    this.btnB.onclick = function () {
-      me.change();
-    }
-  },
-  change:function() {
-    console.log('topBar.a before: ', topBar.a);
-    topBar.a = 40;
-    console.log('topBar.a after: ', topBar.a);
-  }
-};
-
-topBar.init();
-console.log(topBar.a); // 8
-
-banner.init();
-```
-
-上面的例子中的举例步骤是：
-
-- 页面初始化时输出4
-- 点击A时输出5
-- 再点击B时输出：
- ```
- topBar.a before:  5
- topBar.a after:  40
- 
- ```
-
-通过单例模式可以做到组件间的通信，全局作用域中只有一个实例，还可以做到实例间的通信。
