--- a/javascript/contents/65.md
+++ b/javascript/contents/65.md
@@ -1,66 +1,279 @@
-## 建造者模式
+> Generator 函数是 一种异步编程解决方案，Generator 函数会返回一个遍历器对象，Generator 函数是一个普通函数，但是有两个特征。一是，function关键字与函数名之间有一个星号；二是，函数体内部使用yield表达式。
 
-> 建造者模式将一个复杂对象的构建和其表示相分离，使得同样的构建过程可以创建不同的表示。也就是说如果我们用了建造者模式，那么用户就需要制定需要建造的类型就可以得到他们，而具体建造的过程和细节就不需要知道了，建造者模式实际上，就是一个指挥者，一个建造者，一个指挥者调用具体建造者工作得出结果的客户。
-> 建造者模式主要用于"分步骤构建一个复杂的对象"，在这其中"分步骤"是一个稳定的算法，而复杂对象的各个部分则经常变化。
-
-## 建造者模式的作用
-
-1. 分步创建一个复杂的对象 (建房子的过程：客户交给包工头，包工头监督工人，工人施工建造 这样分步骤，而内部又会有很多步骤)
-2. 解耦封装过程和具体创建的组件 (每个过程或组件都是互不干扰的，各自独立，职责单一)
-3. 无需关心组件如何组装。(客户想要房子，不需要关心房子内部的每个结构是如何建造的)
-
-## 建造者模式的注意事项
-
-1. 一定要一个稳定的算法进行支持。(契约，合同和整体框架)
-2. 加工工艺是暴露的。(客户和工人之间可以对话，客户和包工头之间也可以对话)
-
-## 建造者模式的应用
-
-举例客户想要房子，客户通过包工头，包工头来指挥工人盖房子, 在这里包工头相当于一个接口，比如电视机的开关按钮，通过这个按钮指挥电视机的状态。
+### 认识generator函数
 
 ```javascript
-// 房子
-function House() {
-  this.bedRoom = "";
-  this.livingRoom = "";
-  this.kitchen = "";
+function * fn() {
+  console.log('hello');
+  return 'Joh';
+}
+// 执行fn()时不会直接执行方法体中的代码，它会返回一个指针, 这个指针实现了 interator接口，也就是返回一个interator对象
+let it = fn();
+// 通过调用next就会执行方法体, 返回结果是 {value:'Joh', done:true}, 其中next返回的是函数体中return的值
+let res = it.next();
+console.log(res);
+```
+
+### generator函数中的yield 与 return
+
+```javascript
+function * fn() {
+    // 和yield相配合，把一个generator内部分为几个断点来执行，每个断点就是yield语句
+    // 注意 yield和return的区别： yield可以有多个，return只能有1个
+    yield 1;
+    yield 2;
+    yield 3;
+    return 4; // 可以没有return值，done为true的value将会是undefined
+  }
+  let it = fn();
+  // 在for-of 循环中只能打印done为false的value值，done为true时,程序终止
+  for(let v of it) {
+    console.log(v); // 分别输出 1 2 3
+  }
+```
+
+### yield 的值与赋值语句
+
+```javascript
+function * fn(_name) {
+  let name = yield _name; // yield 的默认值为undefined
+  return name;
+}
+let it = fn('Joh');
+console.log(it.next()); // {value:'Joh', done:false}
+console.log(it.next('Tom')); // {value:'Tom', done:true} // 此处value应该为undefined，但是通过next参数的形式赋值改变了最后一个值
+console.log(it.next('Lily')); // {value: undefined, done:true} // 已经循环完毕，即使传值也是undefined
+
+```
+
+### yield 语句的位置与括号
+
+```javascript
+function sum(a, b) {
+  return a + b;
+}
+function * fn() {
+  let res = sum(yield 1, 5 + (yield 3));
+  console.log(res);
+  console.log('my qq: ' + (yield qq)); // yield 在一个语句中需要括起来
+}
+fn();
+```
+
+### yield 异常捕获
+
+异常捕获的方式1：
+```javascript
+function * fn() {
+  let qq = yield; // yield 默认返回undefined, 不会抛出异常
+  console.log(qq);
 }
 
-// 监工
-function Overseer() {
-  // 指挥盖房子
-  this.conductCreateHouse = function (worker) {
-    worker.createBedRoom();
-    worker.createLivingRoom();
-    worker.createKitchen();
-  };
+let g = fn();
+g.next(); // 第一个断点没有输出
+// g.next('qq 11111'); // 完毕之后传值输出：qq 11111
+g.throw('error!'); // Uncaught error!
+```
 
-  // 交房子
-  this.handOverHouse = function() {
-    var house = new House();
-    house.bedRoom = 'ok'; // 验工 合格
-    house.livingRoom = 'ok'; // 验工 合格
-    house.kitchen = 'ok'; // 验工 合格
-    return house;
+异常捕获的方式2：
+
+```javascript
+function * fn() {
+  let qq;
+  try {
+    qq = yield; // yield 默认返回undefined
+  }catch(e){
+    console.log('qq have error');
+  }finally{
+    console.log(qq);
+  }
+}
+let g = fn();
+g.next();
+g.throw('error!');
+// qq have error
+// undefined
+```
+
+异常捕获的方式3：
+
+```javascript
+function * fn() {
+  let qq;
+  qq = yield;
+  console.log(qq);
+}
+let g = fn();
+g.next();
+try{
+  g.throw('error!');
+}catch(e){
+  console.log('qq have error!');
+}
+```
+
+异常捕获的方式4:
+
+```javascript
+function * fn() {
+  let qq;
+  try {
+    qq = yield ff; // ff 未定义, 所以qq不会被正确赋值 此处是非 yield 的异常
+  }catch(e){
+    console.log('err1');
+  }
+  console.log(qq);
+}
+let g = fn();
+g.next();
+g.next('qq 5554');
+// err1
+// undefined
+```
+
+### 利用generator和promise结合使用，让异步的逻辑关系，使用同步的方式书写
+
+```javascript
+function asyncF(name) {
+  return new Promise(function(resolve){
+    setTimeout(function(){
+      resolve('my name is ' + name);
+    });
+  });
+}
+
+function * fn() {
+  console.log(yield asyncF('Joh'));
+}
+
+let gf = fn();
+
+function exec(gf,value) {
+  let res = gf.next(value);
+  if(!res.done) {
+    if(res.value instanceof Promise) {
+      res.value.then(function (v) {
+        exec(gf, v);
+      })
+    }else{
+      exec(gf, res.value);
+    }
+  }
+}
+exec(gf); // my name is Joh
+```
+
+更复杂的写法：
+
+```javascript
+function asyncF(name) {
+  return new Promise(function(resolve){
+    setTimeout(function(){
+      resolve('my name is ' + name);
+    });
+  });
+}
+
+function sum(a, b) {
+  return new Promise(function (resolve) {
+    setTimeout(function () {
+        resolve(a + b);
+    });
+  })
+}
+
+function * fn(name) {
+  if((yield sum(3,5)) > 6) {
+    console.log(yield asyncF(name));
+  }else{
+    console.log('error');
   }
 }
 
-// 工人
-function Worker() {
-  this.createBedRoom = function() {
-    console.log('bedRoom is ok');
-  };
-  this.createLivingRoom = function() {
-    console.log('livingRoom is ok');
-  };
-  this.createKitchen = function() {
-    console.log('kitchen is ok');
-  };
+let gf = fn('Joh');
+
+// generator 执行器 相当于 tj/co 模块
+function exec(gf,value) {
+  let res = gf.next(value);
+  if(!res.done) {
+    if(res.value instanceof Promise) {
+      res.value.then(function (v) {
+        exec(gf, v);
+      })
+    }else{
+      exec(gf, res.value);
+    }
+  }
+}
+exec(gf); // my name is Joh
+```
+
+使用纯promise实现：
+
+```javascript
+function asyncF(name) {
+  return new Promise(function(resolve){
+    setTimeout(function(){
+      resolve('my name is ' + name);
+    });
+  });
 }
 
-var worker = new Worker();
-var overseer = new Overseer();
-overseer.conductCreateHouse(worker);
-var house = overseer.handOverHouse(); 
-console.log(house);
+function sum(a, b) {
+  return new Promise(function (resolve) {
+    setTimeout(function () {
+        resolve(a + b);
+    });
+  })
+}
+
+function fn(name) {
+  sum(3,5)
+    .then(function (num) {
+      if(num > 6) {
+        asyncF(name)
+          .then(function (v) {
+            console.log(v);
+          })
+      }else{
+        console.log('error');
+      }
+    })
+}
+
+fn('Joh');
+```
+
+### 使用co模块，来代替自己写的执行器
+
+```javascript
+var co = require('co');
+
+function asyncF(name) {
+  return new Promise(function(resolve){
+    setTimeout(function(){
+      resolve('my name is ' + name);
+    });
+  });
+}
+
+function sum(a, b) {
+  return new Promise(function (resolve) {
+    setTimeout(function () {
+        resolve(a + b);
+    });
+  })
+}
+
+function * fn(name) {
+  if((yield sum(3,5)) > 6) {
+    console.log(yield asyncF(name));
+  }else{
+    console.log('error');
+  }
+}
+
+var fnx = co.wrap(fn);
+
+fnx('Joh'); // my name is Joh
 ```
