--- a/javascript/contents/68.md
+++ b/javascript/contents/68.md
@@ -1,293 +1,177 @@
-> The Promise object represents the eventual completion (or failure) of an asynchronous operation, and its resulting value.
-> <br>
-> Promise 对象用于一个异步操作的最终完成（或失败）及其结果值的表示。简单点说，它就是用于处理异步操作的，异步处理成功了就执行成功的操作，异步处理失败了就捕获错误或者停止后续操作。
+在ES6中又对Array扩展了不少方法，下面我们来看下
 
-### 在promise之前处理异步回调的方式
+### from方法
 
+将伪数组转换为数组
 ```javascript
-function asyncFun(a,b,callback) {
-      setTimeout(function () {
-        callback(a+b);
-      },200);
-    }
-
-    asyncFun(1,2, function (res) {
-      if(res > 2) {
-        asyncFun(res, 2, function (res) {
-          if(res > 4) {
-            asyncFun(res, 2, function (res) {
-              console.log('ok');
-              console.log(res);
-            })
-          }
-        })
-      }
-    });
+let obj = {
+  '0':'h',
+  '1':'i',
+  'length':2
+};
+let arr = Array.from(obj);
+console.log(Array.isArray(arr)); // true
+console.log(arr); // ["h", "i"]
 ```
 
-从上面可以看出所谓的"回调地狱"的可怕
-
-### 使用promise来优雅的处理异步
+通过第二个回调参数对值进行再加工处理
 
 ```javascript
-function asyncFun(a,b) {
-  return new Promise(function (resolve, reject) {
-    setTimeout(function() {
-      resolve(a + b);
-    },200);
-  })
-}
-
-asyncFun(1,2)
-.then(function (res) {
-  if(res > 2) {
-    return asyncFun(res, 2);
-  }
-})
-.then(function (res) {
-  if(res > 4) {
-    return asyncFun(res, 2);
-  }
-})
-.then(function (res) {
-  console.log('ok');
-  console.log(res);
-})
-.catch(function (error) {
-  console.log(error);
+let obj = {
+  '0':'h',
+  '1':'i',
+  'length':2
+};
+let arr = Array.from(obj,function(item, index) {
+  // 对返回的值进行处理
+  return item + '...'
 });
+console.log(arr); // ["h...", "i..."]
 ```
 
-### 使用promise处理内部异常的举例
-
+可转换实现了interator接口的类型如：set和map 为数组
 ```javascript
-function asyncFun(a,b) {
-  return new Promise(function (resolve, reject) {
-    // 模拟异常判断
-    if(typeof a !== 'number' || typeof b !== 'number') {
-      reject(new Error('no number'));
-    }
-    setTimeout(function() {
-      resolve(a + b);
-    },200);
-  })
-}
-
-asyncFun(1,2)
-.then(function (res) {
-  if(res > 2) {
-    return asyncFun(res, 2);
-  }
-},function (err) {
-  console.log('first err: ', err);
-})
-.then(function (res) {
-  if(res > 4) {
-    return asyncFun(res, 'a');
-  }
-},function (err) {
-  console.log('second err: ', err);
-})
-.then(function (res) {
-  console.log('ok');
-  console.log(res);
-},function (err) {
-  console.log('third err: ', err);
-});  
+var set = new Set(['me','book','Joh']);
+var arr = Array.from(set);
+console.log(arr); // ["me", "book", "Joh"]
 ```
 
-从上面可以看出通过then的第二个回调函数处理promise对象中的异常，通过reject返回异常的promise对象
+其他：使dom节点NodeList转化为数组
 
-### 通过catch统一处理错误，通过finally执行最终必须执行的逻辑
+### of方法
 
 ```javascript
-function asyncFun(a,b) {
-  return new Promise(function (resolve, reject) {
-    // 模拟异常判断
-    if(typeof a !== 'number' || typeof b !== 'number') {
-      reject(new Error('no number'));
-    }
-    setTimeout(function() {
-      resolve(a + b);
-    },200);
-  })
-}
+var arr = new Array(5); // 数组之前的这种形式和字符串等类型的操作不统一，得到的只是长度为5的空数组
+console.log(arr); // [empty × 5]
 
-asyncFun(1,2)
-.then(function (res) {
-  if(res > 2) {
-    return asyncFun(res, 2);
-  }
-})
-.then(function (res) {
-  if(res > 4) {
-    return asyncFun(res, 'a');
-  }
-})
-.then(function (res) {
-  console.log('ok');
-  console.log(res);
-})
-.catch(function (error) {
-  console.log('catch: ', error);
-})
-.finally(function () {
-  console.log('finally: ', 1+2);
+var arr2 = Array.of(12);
+console.log(arr2);// [12]
+
+var arr3 = Array.of(12,3,5,22);
+console.log(arr3); // [12, 3, 5, 22]
+```
+
+使用of方法，直接获得数组
+
+### find方法
+
+find 查找符合函数的标准，返回一个真值，第一个就符合 : 
+
+```javascript
+var arr = [undefined, 22,33,44];
+var val = arr.find(function () {
+  return true;
 });
+console.log(val); // undefined 始终返回第一个值，无论是0,'', NaN, undefined, null 都返回第一个值
 ```
 
-### 通过Promise.all()静态方法来处理多个异步
-
+返回false, 将没有一个符合，最终结果是undefined
 ```javascript
-function asyncFun(a,b) {
-  return new Promise(function (resolve, reject) {
-    setTimeout(function() {
-      resolve(a + b);
-    },200);
-  })
-}
-
-var promise = Promise.all([asyncFun(1,2), asyncFun(2,3), asyncFun(3,4)])
-promise.then(function (res) {
-  console.log(res);  // [3, 5, 7]
+var arr = [20, 22,33,44];
+var val = arr.find(function () {
+  return false;
 });
+console.log(val); // undefined
 ```
 
-### 通过Promise.race()静态方法来获取多个异步中最快的一个
-
+通过find参数中的value来判断
 ```javascript
-function asyncFun(a,b,time) {
-  return new Promise(function (resolve, reject) {
-    setTimeout(function() {
-      resolve(a + b);
-    },time);
-  })
-}
-
-var promise = Promise.race([asyncFun(1,2,10), asyncFun(2,3,6), asyncFun(3,4,200)])
-promise.then(function (res) {
-  console.log(res);  // 5
+var arr = [21, 22, 33, 44];
+var val = arr.find(function (value, index, arr) {
+  return value > 22;
 });
+console.log(val); // 33
 ```
 
-### 通过Promise.resolve() 静态方法来直接返回成功的异步对象
+### findIndex方法
+
+和find方法几乎一样，就是返回值是索引
 
 ```javascript
-var p = Promise.resolve('hello');
-p.then(function (res) {
-  console.log(res); // hello
+var arr = [21, 22, 33, 44];
+var val = arr.findIndex(function (value, index, arr) {
+  return value > 22;
 });
+console.log(val); // 2
 ```
 
-等同于，如下：
+findIndex可以解决indexOf无法解决的问题：
 
 ```javascript
-var p = new Promise(function (resolve, reject) {
-  resolve('hello2');
-})
-p.then(function (res) {
-  console.log(res); // hello2
+var arr = [NaN];
+var res1 = arr.indexOf(NaN);
+var res2 = arr.findIndex(function (v) {
+  return Object.is(NaN, v);
 });
+
+console.log(res1); // -1 未找到
+console.log(res2); // 0 找到
 ```
 
-### 通过Promise.reject() 静态方法来直接返回失败的异步对象
+### copyWithin方法
+
+copyWithin 操作原数组 (起始索引,拷贝值的索引起点，拷贝值的索引终点), 将拷贝的值替换原值 ,注意左闭右开
 
 ```javascript
-var p = Promise.reject('err')
-p.then(null, function (res) {
-  console.log(res); // err
-});
+// 替换多个值
+var arr1 = [1,2,3,4,5,6,7];
+arr1.copyWithin(1,5,7);
+console.log(arr1); //  [1, 6, 7, 4, 5, 6, 7]
+
+// 替换一个值的不同表示1
+var arr2 = [1,2,3,4,5,6,7];
+arr2.copyWithin(2,5,6); // 将6替换3
+console.log(arr2); //  [1, 2, 6, 4, 5, 6, 7]
+
+// 替换一个值的不同表示2 从后面数，最后一个是-1，倒数第二个是-2
+var arr3 = [1,2,3,4,5,6,7];
+arr3.copyWithin(2,-2,-1); 
+console.log(arr3); // [1,2,6,4,5,6,7]
+
+// 替换一个值的不同表示3 前后混合使用
+var arr3 = [1,2,3,4,5,6,7];
+arr3.copyWithin(2,5,-1); 
+console.log(arr3); // [1,2,6,4,5,6,7]
 ```
 
-等同于，如下：
+### fill方法
+
+fill(默认填充值，填充起始索引，填充结束索引) ， 注意区间的左闭右开
 
 ```javascript
-var p = new Promise(function (resolve, reject) {
-  reject('err2');
-})
-p.then(null, function (res) {
-  console.log(res); // err
-});
+var arr1 = [1,2,3,4,5,6,7];
+arr1.fill(10);
+console.log(arr1); // [10, 10, 10, 10, 10, 10, 10]
+
+var arr2 = [1,2,3,4,5,6,7];
+arr2.fill(10,2,5); 
+console.log(arr2); // [1, 2, 10, 10, 10, 6, 7]
 ```
 
-### 通过一个小例子来测试Promise在面向对象中应用
+### includes方法
+
+includes 用于查找是否包含某种元素
+```javascript
+const arr1 = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', NaN];
+console.log('%s', arr1.includes('c')) // true
+console.log('%s', arr1.includes('z')) // false
+console.log('%s', arr1.includes(NaN)) // true
+```
+
+函数的第二个参数表示判断的起始位置 :
 
 ```javascript
-'use strict';
+const arr1 = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', NaN];
+console.log('%s', arr1.includes('d', 1)) // true
+console.log('%s', arr1.includes('d', 3)) // true
+console.log('%s', arr1.includes('d', 4)) // false
+```
 
-class User{
-  constructor(name, password) {
-    this.name = name;
-    this.password = password;
-  }
+第二个参数也可以是负数，表示从右数过来第几个，但是不改变判断搜索的方向，搜索方向还是从左到右
 
-  send() {
-    let name = this.name;
-    return new Promise(function (resolve, reject) {
-      setTimeout(function () {
-        if(name === 'leo') {
-          resolve('send success');
-        }else{
-          reject('send error');
-        }
-      });
-    });
-  }
-
-  validatePwd() {
-    let pwd = this.password;
-    return new Promise(function (resolve, reject) {
-      setTimeout(function () {
-        if(pwd === '123') {
-          resolve('validatePwd success');
-        }else{
-          reject('validatePwd error');
-        }
-      });
-    })
-  }
-}
-
-let user1 = new User('Joh');
-user1.send()
-  .then(function (res) {
-    console.log(res);
-  })
-  .catch(function (err) {
-    console.log(err);
-  });
-
-let user2 = new User('leo');
-user2.send()
-  .then(function (res) {
-    console.log(res);
-  })
-  .catch(function (err) {
-    console.log(err);
-  });
-
-let user3 = new User('leo', '123');
-user3.validatePwd()
-  .then(function (res) {
-    return user3.validatePwd();
-  })
-  .then(function (res) {
-    console.log(res);
-  })
-  .catch(function(error) {
-    console.log(error);
-  });
-
-let user4 = new User('leo', '1234');
-user4.validatePwd()
-  .then(function (res) {
-    return user4.validatePwd();
-  })
-  .then(function (res) {
-    console.log(res);
-  })
-  .catch(function(error) {
-    console.log(error);
-  });
-
+```javascript
+const arr1 = ['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', NaN]
+console.log('%s', arr1.includes('k', -1)); // false
+console.log('%s', arr1.includes('k', -2)); // true
+console.log('%s', arr1.includes('i', -3)); // false
 ```
