--- a/javascript/contents/71.md
+++ b/javascript/contents/71.md
@@ -1,102 +1,32 @@
-> Set 类似于数组，但是成员的值都是唯一的，没有重复的值, 实现了iterator接口
+### 字符串includes,startsWith,endsWith方法测试
 
-### set 的值不可重复，数组的值可以重复
-
-```javascript
-let arr = [1,2,3,'5','5'];
-let st = new Set(arr);
-console.log(st); // 可以通过set来去除数组的重复的值，返回的是一个伪数组
-console.log(st.size); // 4
-```
-
-### set 的 add , delete, has, clear 方法
-
-简单的add 与 delete ：
+普通的用法：
 
 ```javascript
-let st = new Set();
-var u = {name:'Joh'};
-st.add(u);
-let bool = st.delete(u);
-console.log(bool); // true;
+var str = 'Hello';
+console.log(str.indexOf('o')); // 4
+console.log(str.includes('e')); // true
+console.log(str.startsWith('H')); // true
+console.log(str.endsWith('e')); // false
 ```
 
-连续add与has的api ：
+添加第二个参数之后，标注查询的起始位置：
 
 ```javascript
-let st = new Set();
-var u = {name:'Joh'};
-var r = {name:'Lily'};
-st.add(u).add(r);
-let bool = st.delete(r);
-console.log(bool); // true
-console.log(st.has(r)); // false
-console.log(st.has(u)); // true;
+var str = 'Hello';
+console.log(str.includes('e',1)); // true
+console.log(str.startsWith('e',1)); // true
+console.log(str.endsWith('l',3)); // true
 ```
 
-clear清空set集合
+### 实用的repeat方法
 
 ```javascript
-let st = new Set();
-var u = {name:'Joh'};
-var r = {name:'Lily'};
-st.add(u).add(r);
-st.clear();
-console.log(st.size); // 0
+var str = 'Hello';
+var res = str.repeat(3);
+console.log(res); // HelloHelloHello
 ```
 
-### 通过Array.from方法把类似数组结构的模型转化为数组
+### String 中更多的API【官方文档】用时可查询
 
-```javascript
-let arr = ['xxx', 'yyyy', 'yyyy'];
-let newArr = Array.from(new Set(arr)); 
-console.log(Array.isArray(newArr)); // true
-console.log(newArr); // ["xxx", "yyyy"]
-```
-
-### Set 原型上的Symbol.iterator 和 values 是同一个值, 可直接for-of遍历
-
-```javascript
-console.log(Set.prototype[Symbol.iterator] === Set.prototype.values); // true
-let st = new Set(['xxx', 'yyyy', 'yyyy', 'John']);
-for(let k of st) {
-  console.log(k); // 依次输出 xxx yyyy John 可以直接遍历，兼容map的数据结构
-}
-```
-
-### set中的keys和values方法
-
-```javascript
-    let st = new Set(['xxx', 'yyyy', 'yyyy', 'John']);
-    console.log(st.size); // 3
-    let itKeys = st.keys();
-    for(let k of itKeys) {
-      console.log(k); // 依次输出 xxx yyyy John
-    }
-    console.log('>>>>>');
-    let itVals = st.values();
-    for(let v of itVals) {
-      console.log(v); // 依次输出 xxx yyyy John
-    }
-```
-
-### set 的entries 实体对象，是个键和值的数组结构
-
-```javascript
-let st = new Set(['xxx', 'yyyy', 'yyyy', 'John']);
-let entriesIt = st.entries(); // 
-for(let v of entriesIt) {
-  console.log(v); // 依次输出 ["xxx", "xxx"] ["yyyy", "yyyy"] ["John", "John"]
-}
-```
-
-### 关于NaN在set中的特殊性
-
-```javascript
-let st = new Set();
-console.log(NaN === NaN); // false , 此处 NaN 是不全等的，理应可以添加多个，不算重复，但是这里是个特例
-st.add(NaN).add(NaN).add(NaN);
-for(let v of st) {
-  console.log(v); // 只输出一个 NaN 
-}
-```
+- https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String
