--- a/javascript/contents/77.md
+++ b/javascript/contents/77.md
@@ -1,78 +1,40 @@
-ES6 中对字符串进行了扩展，而模板字符串就是一个非常实用的方式，可以在html中实现与变量和方法的混编
+同函数数组参数一样，函数的对象参数的默认值和解构过程整理
 
-### 之前我们手动拼接字符串的方式
+### 函数对象参数的默认值与解构的形式
+
+此处使用箭头函数来处理 ： 
 
 ```javascript
-let hello = 'Hello';
-let html = '<div>' + 
-  '<span>'+ hello +'</span>' + 
-  '</div>';
+(({x,y})=>{
+  console.log(x, y); // // undefined undefined
+})({});
 
-console.log(html); // <div><span>Hello</span></div>
+(({x=1,y=2})=>{
+  console.log(x,y); // 1 2
+})({});
+
+(({x=3, y=4}={})=>{
+  console.log(x,y); // 3 4
+})();
 ```
 
-### ES6中使用模板字符串来优化了拼接的方式
+### 注意传值解析中可能的陷阱
 
 ```javascript
-let name = 'Joh';
-let qq = '56655';
-
-function log() {
-  return 'Hi there!';
+function test4({x,y}={x:100,y:200}) {
+  console.log(x,y);
 }
-let html = `
-  <div>
-    <ul>
-        <li>${ name === 'Joh' ? 'is Joh' : 'not Joh'}</li>
-        <li>${qq}</li>
-        <li>${log()}</li>
-    <ul>
-  </div>
-`
-console.log(html);
 
-/*
-// 输出如下html:
-<div>
-    <ul>
-        <li>is Joh</li>
-        <li>56655</li>
-        <li>Hi there!</li>
-    <ul>
-</div>   
-*/
+test4({}); // undefined undefined
+test4(); // 100 200
 ```
 
-可以看出模板字符串优化了之前拼接字符串的方式，更方便于编程
-
-### 关于标签模板
-
-未经处理的标签函数与模板字符串的结合，导致模板字符串失效
+### 对象参数，数组参数和字符参数的结合使用
 
 ```javascript
-function tag() {
-  return 'tag';
+function test({x=1,y=2,z=3}={}, [a=11,b=22,c=33]=[],name='Joh') {
+  console.log(x,y,z,a,b,c,name);
 }
-let name = "Joh";
-var res = tag`hello ${name}`;
-console.log(res); // tag
-```
 
-标签函数对模板字符串进行处理, 安全编码的示例：
-
-```javascript
-function safe(strArr) {
-  let res = '';
-  console.log(arguments);
-  for(var i=0, len = strArr.length; i < len; i++) {
-    res += strArr[i].replace(/</g, '&lt;').replace(/>/g, '&gt;');
-    if(i < arguments.length -1) {
-      res += arguments[i + 1];
-    }
-  }
-  return res;
-}
-let name = 'Joh';
-var result = safe`<p>hello ${name}</p>`;
-console.log(result); // &ltp&gt;hello Joh&lt/p&gt;
+test(); // 1 2 3 11 22 33 "Joh"
 ```
