--- a/javascript/contents/81.md
+++ b/javascript/contents/81.md
@@ -1,83 +1,150 @@
-> 在ES6中， 函数的参数也可以使用解构赋值和默认值的设置，下面我们来看下
+> 设计模式 (Design pattern) 是一套被反复使用、思想成熟、经过分类和无数实战设计经验的总结的。使用设计模式是为了让系统代码可重用、可扩展、可解耦、更容易被人理解且能保证代码的可靠性。设计模式使代码开发真正工程化，设计模式是软件工程的基石脉络，如同大厦结构一样。只有夯实地基打好结构，才能盖好高楼大厦。
 
-### 在ES6之前设置函数默认值的写法
+## 为什么要有设计模式？
 
-```javascript
-function test(x,y) {
-  x = x || 12;
-  y = y || 22;
-  console.log(x,y);
-}
-test(); // 12 22
-test(1,2) // 1 2
-```
+- 为了代码的复用，增加可维护性
 
-### 在ES6中给函数参数赋默认值
+## 设计模式的原则
 
-```javascript
-function test(x=12, y=22) {
-  console.log(x,y);
-}
-test(); // 12 22
-test(3,4); // 3 4
-```
+- __开闭原则__：对扩展开放，对修改关闭。比如生活中只往上盖楼，而不拆楼(改变楼的结构)
+- __里氏转换原则__：子类继承父类，单独调完全可以，比如：小狗是动物，我们可以调用小狗的睡觉和吃饭方法，不影响父类
+- __依赖倒转原则__：引用一个对象，如果这个对象有底层类型，直接引用底层，比如：从井里打出的水倒入桶里, 这个水可以是井里的，也可以是桶里的，这里的底层就是井里的水。
+- __接口隔离原则__：每一个接口应该是一种角色，职责单一，互不影响。比如：每把钥匙开一把锁。
+- __合成/聚合复用原则__：新的对象应该使用一些已有的对象，使之成为新对象的一部分，比如：手里有一些相机的零件，而又去买了一个新的相机。
+- __迪米特原则__：一个对象应对其他对象有尽可能少的了解，也就是高内聚，低耦合，尽可能减少组件之间的联系，解耦合。比如：不要把牙刷和鞋刷搞在一起。
 
-### ES6中函数数组参数的默认值
+总之，通过设计模式的这些原则，就可以站在巨人的肩膀上Hold住系统架构。
 
-```javascript
-function test([x=2,y=1]) {
-  console.log(x, y);
-}
+## 设计模式之单例模式
 
-test([]); // 2, 1
-test([3,4]) // 3 4
-test();  // 报错： Uncaught TypeError: Cannot read property 'Symbol(Symbol.iterator)' of undefined
+1） 单例模式是什么？
 
-```
+单例就是保证一个类只有一个实例，实现的方法一般是先判断实例存在与否，如果存在直接返回，如果不存在，创建了再返回，这就确保一个类只有一个实例对象，在js中，单例作为一个命名空间提供者，从全局命名空间里提供一个唯一的访问点来访问该对象。
 
-解决上述最后一个错误：使用默认数组来匹配没有参数的情形
+2） 单例模式的作用：
 
-```javascript
-function test([x=2,y=1]=[]) {
-  console.log(x, y);
-}
-test();   // 2 1
-```
+- 模块之间通信
+- 系统中某个类的对象只能存在一个
+- 保护自己的属性和方法
 
-更多应用：
+3） 单例模式中的注意事项：
+- 注意this的使用
+- 注意闭包容易造成内存泄露，不需要的要赶快回收
+- 注意new的成本，比如：直接声明一个字面量的形式来初始化字符串比通过`new String()`的方式成本要低
+
+4） 单例模式展示：
+
+- 例子：使用单例模式来表示：Joh和Lily两个人之间通信的过程：
 
 ```javascript
-function test([x=2,y=1]=[], z=90) {
-  console.log(x, y, z);
+
+var Joh = (function(argument){
+  // 内部有一个屋子对象
+  JohHouse = function(message) {
+    this.doorbell = message; // 门铃作为信息通道,这里门铃就代表了信息
+  };
+  var door; // 初始化一个门
+  var info = {
+    // 发送消息的方法
+    sendMessage:function(message){
+      // 这就是单例模式中的没有了创建，再返回
+      if(!door) {
+        door = new JohHouse(message);
+      }
+      return door;
+    }
+  };
+  return info; // Joh 就是这个 info
+})();
+
+var Lily = {
+  callJoh:function(msg) {
+    var door = Joh.sendMessage(msg); // 此处sendMessage函数是一个闭包
+    alert(door.doorbell);
+    door = null; // 用完回收
+  }
 }
-test();   // 2 1 90
-test(undefined, 80); // 2 1 80
-test('', 50); // 2 1 50 正常输出
-// test(null, 80); // 报错，不能填入null Uncaught TypeError: Cannot read property 'Symbol(Symbol.iterator)' of object
-// test(NaN, 60); // 报错： Uncaught TypeError: undefined is not a function
+
+Lily.callJoh('I am coming!'); // 弹出 I am coming!
+
 ```
 
-注意上面函数参数可以接受undefined，但不能接受null和NaN
 
-下面则是更复杂的应用
+- 例子2：页面上按钮之间的通信
+
+```html
+<div class='topBar'>
+  <button id='a'>A</button>
+</div>
+
+<div class='banner'>
+  <button id='b'>B</button>
+</div>
+```
 
 ```javascript
-function test([x=2,[y=3,w=4]=[]]=[], z=90) {
-  console.log(x, y, w, z);
-}
-test(); // 2 3 4 90
-test(undefined, undefined); // 2 3 4 90
-test(undefined, 8); // 2 3 4 8
-test([5,[]],12); // 5 3 4 12
-test([5,[2,6]],12); // 5 2 6 12
+var topBar = {
+  init:function() {
+    this.render();
+    this.bind();
+  },
+  a:4,
+  // render 函数用于获取页面元素
+  render:function(){
+    this.btnA = document.getElementById('a');
+  },
+  // bind 函数用于绑定事件
+  bind:function() {
+    var me = this;
+    // 绑定点击事件 更新自身
+    this.btnA.onclick = function () {
+      me.change();
+      console.log(me.a); // 输出当前的a
+    }
+  },
+  change:function() {
+    this.a = 5;
+  }
+};
+
+var banner = {
+  init:function() {
+    this.render();
+    this.bind();
+  },
+  // render 函数用于获取页面元素
+  render:function(){
+    this.btnB = document.getElementById('b');
+  },
+  // bind 函数用于绑定事件
+  bind:function() {
+    var me = this;
+    this.btnB.onclick = function () {
+      me.change();
+    }
+  },
+  change:function() {
+    console.log('topBar.a before: ', topBar.a);
+    topBar.a = 40;
+    console.log('topBar.a after: ', topBar.a);
+  }
+};
+
+topBar.init();
+console.log(topBar.a); // 8
+
+banner.init();
 ```
 
-注意其中的陷阱：
+上面的例子中的举例步骤是：
 
-```javascript
-function test([x,y]=[1,2]) {
-  console.log(x,y);
-}
-test(); // 1 2
-test([]); // undefined undefined
-```
+- 页面初始化时输出4
+- 点击A时输出5
+- 再点击B时输出：
+ ```
+ topBar.a before:  5
+ topBar.a after:  40
+ 
+ ```
+
+通过单例模式可以做到组件间的通信，全局作用域中只有一个实例，还可以做到实例间的通信。
